--- a/data/cards/07903368.yaml
+++ b/data/cards/07903368.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>水<rt>すい</rt></ruby><ruby>晶<rt>しょう</rt></ruby>ドクロ
   ja_romaji: Suishō Dokuro
-  ko:
-  ko_rr:
+  ko: 수정해골
+  ko_rr: Sujeonghaegol
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが召喚・反転召喚・特殊召喚に成功した場合に発動する。自分は１０００ダメージを受ける。その後、このカードは守備表示になる。②：自分が効果ダメージを受けていないターンのエンドフェイズに発動できる。デッキから攻撃力０の岩石族モンスター１体を選び、手札に加えるか特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 경우에 발동한다. 자신은 1000 데미지를 받는다. 그 후, 이 카드는 수비 표시가 된다. ②: 자신이 효과 데미지를 받지 않은 턴의 엔드 페이즈에 발동할 수 있다. 덱에서 공격력 0 의 암석족 몬스터 1장을 고르고, 패에 넣거나 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
