--- a/data/cards/07925734.yaml
+++ b/data/cards/07925734.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。自分のＥＸデッキの裏側表示のカードをランダムに１枚選んで除外する。除外したカードがリンクモンスターだった場合、このカードを特殊召喚する。違った場合、このカードを手札から捨て、自分はデッキから１枚ドローする。
   ko: |-
-    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패의 이 카드를 상대에게 보여주고 발동할 수 있다. 자신의 엑스트라 덱의 뒷면 표시의 카드를 무작위로 1장 고르고 제외한다. 제외한 카드가 링크 몬스터였을 경우, 이 카드를 패에서 특수 소환한다. 다를 경우, 이 카드를 패에서 버리고, 자신은 덱에서 1장 드로우한다.
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패의 이 카드를 상대에게 보여주고 발동할 수 있다. 자신의 엑스트라 덱의 뒷면 표시의 카드를 무작위로 1장 고르고 제외한다. 제외한 카드가 링크 몬스터였을 경우, 이 카드를 특수 소환한다. 다를 경우, 이 카드를 패에서 버리고, 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
     这个卡名的效果1回合只能使用1次。
