--- a/data/cards/11808215.yaml
+++ b/data/cards/11808215.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ダイス・ダンジョン
   ja_romaji: Daisu Danjon
-  ko:
-  ko_rr:
+  ko: 다이스 던전
+  ko_rr: Daiseu Deonjeon
   zh-TW:
   zh-CN: 骰子地城
 text:
@@ -32,7 +32,14 @@ text:
     ●１：１０００ダウンする。●２：１０００アップする。
     ●３：５００ダウンする。●４：５００アップする。
     ●５：半分にする。●６：倍にする。
-  ko:
+  ko: |-
+    ①: 이 카드의 발동시의 효과 처리로서, 덱에서 "디멘션 다이스" 1장을 패에 넣을 수 있다. ②: 자신 / 상대의 배틀 페이즈 개시시에 발동할 수 있다. 양쪽 플레이어는 각각, 주사위를 1회 던지고, 자신 필드의 모든 몬스터의 공격력에 턴 종료시까지, 나온 눈의 효과를 적용한다.
+    ●1: 1000 내린다.
+    ●2: 1000 올린다.
+    ●3: 500 내린다.
+    ●4: 500 올린다.
+    ●5: 절반이 된다.
+    ●6: 배가 된다.
   zh-TW:
   zh-CN: |-
     ①：作为这张卡的发动时的效果处理，可以从卡组将1张「ディメンション・ダイス／次元骰子」加入手牌。②：自己或对手的战斗阶段开始时可以发动。双方各自掷1次骰子，自身的场上的全部的怪兽的攻击力直到回合结束时适用掷出的数的效果。
