--- a/data/cards/31230289.yaml
+++ b/data/cards/31230289.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: らくがきじゅう－すてご
   ja_romaji: Rakugakijū - Sutego
-  ko:
-  ko_rr:
+  ko: 낙서괴물－스테고
+  ko_rr: Nakseogoemul - Seutego
   zh-TW:
   zh-CN: 涂鸦兽-剑龙
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのモンスターが、存在しない場合または恐竜族モンスターのみの場合に発動できる。このカードを手札から特殊召喚する。②：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「らくがきちょう」魔法・罠カード１枚を手札に加える。その後、自分の手札を１枚選んで捨てる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터가, 존재하지 않을 경우 또는 공룡족 몬스터뿐일 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "낙서장" 마법 / 함정 카드 1장을 패에 넣는다. 그 후, 자신의 패를 1장 고르고 버린다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己场上没有怪兽存在或者存在的怪兽只有恐龙族怪兽的场合可以发动。将这张卡从手牌特殊召唤。②：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1张「らくがきちょう／涂鸦本」魔法陷阱卡加入手牌。那之后，选1张自己的手牌舍弃。
