--- a/data/cards/47292920.yaml
+++ b/data/cards/47292920.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ディメンジョン・ダイス
   ja_romaji: Dimenjon Daisu
-  ko:
-  ko_rr:
+  ko: 디멘션 다이스
+  ko_rr: Dimensyeon Daiseu
   zh-TW:
   zh-CN: 次元骰子
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：サイコロを振る効果を持つカードが自分フィールドに存在する場合、自分フィールドのモンスター１体をリリースして発動できる。サイコロを振るモンスター効果を持つモンスター１体を手札・デッキから特殊召喚する。
-  ko:
+  ko: |-
+    ①: 주사위를 던지는 효과를 가지는 카드가 자신 필드에 존재할 경우, 자신 필드의 몬스터 1장을 릴리스하고 발동할 수 있다. 주사위를 던지는 몬스터 효과를 가지는 몬스터 1장을 패 / 덱에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
     ①：自己场上有拥有掷骰子效果的卡存在的场合，可以将自己场上的1只怪兽解放发动。从手牌或卡组特殊召唤1只拥有掷骰子效果的怪兽。
