--- a/data/cards/84813516.yaml
+++ b/data/cards/84813516.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>鉄<rt>てっ</rt></ruby><ruby>球<rt>きゅう</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>じん</rt></ruby>ゴロゴーン
   ja_romaji: Tekkyūmajin Gorogōn
-  ko:
-  ko_rr:
+  ko: 무쇠공마신 데굴이
+  ko_rr: Musoegongmasin Degul-i
   zh-TW:
   zh-CN: 铁球魔神 骨碌滚
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：モンスターが戦闘を行ったダメージステップ終了時に発動できる。このカードを手札から特殊召喚する。②：手札及び自分フィールドにセットされたカードの中から、罠カード１枚を墓地へ送って発動できる。このカードと同じ縦列の他のモンスターを全て破壊する。③：モンスターゾーンのこのカードが戦闘・効果で破壊され墓地へ送られた場合、自分の墓地のカード１枚を対象として発動できる。サイコロを１回振る。６が出た場合、対象のカードを手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 몬스터가 전투를 실행한 데미지 스텝 종료시에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 패 및 자신 필드에 세트된 카드 중에서, 함정 카드 1장을 묘지로 보내고 발동할 수 있다. 이 카드와 같은 세로열인 다른 몬스터를 전부 파괴한다. ③: 몬스터 존의 이 카드가 전투 / 효과로 파괴되어 묘지로 보내졌을 경우, 자신 묘지의 카드 1장을 대상으로 하고 발동할 수 있다. 주사위를 1회 던진다. 6 이 나왔을 경우, 대상의 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②③效果1回合各能使用1次。①：怪兽进行战斗的伤害步骤结束时可以发动。将这张卡从手牌特殊召唤。②：可以从手牌以及自己场上盖放的卡之中，将1张陷阱卡送入墓地发动。将与这张卡相同纵列的其他的怪兽全部破坏。③：怪兽区的这张卡被战斗或效果破坏并送入墓地的场合，可以以自己墓地的1张卡为对象发动。掷1次骰子。掷出6的场合，将对象卡加入手牌。
