--- a/data/cards/94113093.yaml
+++ b/data/cards/94113093.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: らくがきちょう－とおせんぼ
   ja_romaji: Rakugakichō - Tōsenbo
-  ko:
-  ko_rr:
+  ko: 낙서장－통행금지
+  ko_rr: Nakseojang - Tonghaenggeumji
   zh-TW:
   zh-CN: 涂鸦本-此路不通
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の恐竜族モンスターが攻撃対象に選択された時に発動できる。その攻撃を無効にする。その後、自分の墓地から「らくがきじゅう」モンスター１体を選んで特殊召喚できる。この効果で特殊召喚したモンスターは戦闘では破壊されず、エンドフェイズに破壊される。②：墓地のこのカードを除外して発動できる。デッキからレベル５以上の恐竜族モンスター１体を手札に加える。この効果はこのカードが墓地へ送られたターンには発動できない。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신의 공룡족 몬스터가 공격 대상으로 선택되었을 때에 발동할 수 있다. 그 공격을 무효로 한다. 그 후, 자신 묘지에서 "낙서괴물" 몬스터 1장을 고르고 특수 소환할 수 있다. 이 효과로 특수 소환한 몬스터는 전투로는 파괴되지 않으며, 엔드 페이즈에 파괴된다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 레벨 5 이상의 공룡족 몬스터 1장을 패에 넣는다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己的恐龙族被选择为攻击对象时可以发动。使那次攻击无效。那之后，可以从自己的墓地选1只「らくがきじゅう／涂鸦兽」怪兽特殊召唤。用这个效果特殊召唤的怪兽不会被战斗破坏，在结束阶段破坏。②：可以将墓地的这张卡除外发动。从卡组将1只等级5以上的恐龙族怪兽加入手牌。这个效果在这张卡送入墓地的回合不能发动。
