--- a/data/cards/04836680.yaml
+++ b/data/cards/04836680.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>ＥＭ<rt>エンタメイト</rt></ruby>オッドアイズ・プリースト
   ja_romaji: Entameito Oddoaizu Purīsuto
-  ko:
-  ko_rr:
+  ko: <ruby>EM<rt>엔터메이트</rt></ruby> 오드아이즈 프리스트
+  ko_rr: Enteomeiteu Odeuaijeu Peuriseuteu
   zh-TW:
   zh-CN: 娱乐伙伴 异色眼祭司
 text:
@@ -26,7 +26,8 @@ text:
   pt:
   ja: |-
     このカード名のモンスター効果は１ターンに１度しか使用できない。①：Ｐ召喚したこのカードは表示形式によって、自分メインフェイズに以下の効果を発動できる。●攻撃表示：このカードを除外し、自分の墓地の、「ＥＭ」モンスターまたは「オッドアイズ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。●守備表示：「ＥＭ」Ｐモンスターまたは「オッドアイズ」Ｐモンスター１体をデッキから選び、自分のＥＸデッキに表側表示で加えるか墓地へ送る。
-  ko:
+  ko: |-
+    이 카드명의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 펜듈럼 소환한 이 카드는 표시 형식에 따라, 자신 메인 페이즈에 이하의 효과를 발동할 수 있다.●공격 표시: 이 카드를 제외하고, 자신 묘지의, "EM(엔터메이트)" 몬스터 또는 "오드아이즈" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.●수비 표시: "EM(엔터메이트)" 펜듈럼 몬스터 또는 "오드아이즈" 펜듈럼 몬스터 1장을 덱에서 고르고, 자신의 엑스트라 덱에 앞면 표시로 넣거나 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
     这个卡名的怪兽效果1回合只能使用1次。①：可以根据灵摆召唤的这张卡的表示形式，在自己的主要阶段发动以下的效果。●攻击表示：可以将这张卡除外，以自己墓地的1只「EM／娱乐伙伴」怪兽或者「オッドアイズ／异色眼」怪兽为对象发动。将那只怪兽特殊召唤。●守备表示：从卡组选1只「EM／娱乐伙伴」灵摆怪兽或者「オッドアイズ／异色眼」灵摆怪兽以表侧表示加入自己的额外卡组或送入墓地。
@@ -47,7 +48,8 @@ pendulum_effect:
   pt:
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分の墓地の、「ＥＭ」カードまたは「オッドアイズ」カード１枚を対象として発動できる。そのカードを手札に加える。その後、このカードを破壊する。
-  ko:
+  ko: |-
+    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지의, "EM(엔터메이트)" 카드 또는 "오드아이즈" 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다. 그 후, 이 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
     这个卡名的灵摆效果1回合只能使用1次。①：可以以自己墓地的1张「EM／娱乐伙伴」卡或者「オッドアイズ／异色眼」卡为对象发动。将那张卡加入手牌。那之后，将这张卡破坏。
