--- a/data/cards/05068132.yaml
+++ b/data/cards/05068132.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>夢<rt>ゆめ</rt></ruby><ruby>蝉<rt>ぜみ</rt></ruby>スイミンミン
   ja_romaji: Yumezemi Suiminmin
-  ko:
-  ko_rr:
+  ko: 꿈매미 스이밍밍
+  ko_rr: Kkummaemi Seu-imingming
   zh-TW:
   zh-CN: 梦蝉 睡眠眠
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分フィールドに攻撃表示の昆虫族モンスターが存在する場合、このカードは手札から特殊召喚できる。②：このカードが召喚・特殊召喚に成功した場合、フィールドのモンスター１体を対象として発動できる。そのモンスターの表示形式を変更する。
-  ko:
+  ko: |-
+    이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 공격 표시의 곤충족 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 표시 형식을 변경한다.
   zh-TW:
   zh-CN: |-
     这个卡名的以①的方法所作的特殊召唤1回合只能1次，②效果1回合只能使用1次。①：自己场上有攻击表示的昆虫族怪兽存在的场合，这张卡可以从手牌特殊召唤。②：这张卡召唤或特殊召唤成功的场合，可以以场上的1只怪兽为对象发动。变更那只怪兽的表示形式。
