--- a/data/cards/06180710.yaml
+++ b/data/cards/06180710.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ドリーム・シャーク
   ja_romaji: Dorīmu Shāku
-  ko:
-  ko_rr:
+  ko: 드림 샤크
+  ko_rr: Deurim Syakeu
   zh-TW:
   zh-CN: 梦鲨
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのモンスターが、存在しない場合または水属性モンスターのみの場合に発動できる。このカードを手札から特殊召喚する。②：このカードは１ターンに１度だけ戦闘では破壊されない。③：このカードが墓地に存在し、自分にダメージを与える効果が発動した時に発動できる。このカードを特殊召喚し、その効果で自分が受けるダメージを０にする。この効果で特殊召喚したこのカードは、守備力が１０００ダウンし、フィールドから離れた場合に除外される。
-  ko:
+  ko: |-
+    이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터가, 존재하지 않을 경우 또는 물 속성 몬스터뿐일 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드는 1턴에 1번만 전투로는 파괴되지 않는다. ③: 이 카드가 묘지에 존재하고, 자신에게 데미지를 주는 효과가 발동했을 때에 발동할 수 있다. 이 카드를 특수 소환하고, 그 효과로 자신이 받는 데미지를 0 으로 한다. 이 효과로 특수 소환한 이 카드는, 수비력을 1000 내리고, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
     这个卡名的①③效果1回合各能使用1次。①：自己场上没有怪兽存在，或者存在的怪兽只有水属性怪兽的场合可以发动。将这张卡从手牌特殊召唤。②：这张卡1回合仅1次不会被战斗破坏。③：这张卡在墓地存在，给予自己伤害的效果发动时可以发动。将这张卡特殊召唤，那个效果使自己受到的伤害变为0。用这个效果特殊召唤的这张卡守备力下降1000，从场上离开的场合除外。
