--- a/data/cards/08025950.yaml
+++ b/data/cards/08025950.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ガジェット・ボックス
   ja_romaji: Gajetto Bokkusu
-  ko:
-  ko_rr:
+  ko: 가제트 박스
+  ko_rr: Gajeteu Bakseu
   zh-TW:
   zh-CN: 小机件箱
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「Ｄ」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、このカードにディフォーマーカウンターを３つ置く。②：１ターンに１度、自分メインフェイズに発動できる。自分フィールドのディフォーマーカウンターを１つ取り除き、自分フィールドに「ガジェット・ボックス・トークン」（機械族・地・星１・攻／守０）１体を特殊召喚する。この効果で特殊召喚したトークンが存在する限り、自分はＳモンスターしかＥＸデッキから特殊召喚できない。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "D(디포머)" 카드로도 취급한다. 이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 이 카드에 디포머 카운터를 3개 놓는다. ②: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 자신 필드의 디포머 카운터를 1개 제거하고, 자신 필드에 "가제트 박스 토큰"(기계족 / 땅 / 레벨 1 / 공 0 / 수 0) 1장을 특수 소환한다. 이 효과로 특수 소환한 토큰이 존재하는 한, 자신은 싱크로 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名在规则上也当作「D(ディフォーマー)／变形斗士」卡使用。这个卡名的卡1回合只能发动1张。①：作为这张卡的发动时的效果处理，在这张卡上放置3个变形斗士指示物。②：1回合1次，自己的主要阶段可以发动。将自己场上的1个变形斗士指示物取除，将1只「ガジェット·ボックス・トークン／小机件箱衍生物」（机械族·地·1星·攻/守0）特殊召唤到自己的场上。只要用这个效果特殊召唤的衍生物存在，自己从额外卡组特殊召唤的只能是同调怪兽。
