--- a/data/cards/11020863.yaml
+++ b/data/cards/11020863.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ロイヤル・ストレート・スラッシャー
   ja_romaji: Roiyaru Sutorēto Surasshā
-  ko:
-  ko_rr:
+  ko: 로얄 스트레이트 스래셔
+  ko_rr: Royal Seuteureiteu Seuraesyeo
   zh-TW:
   zh-CN: 皇家同花顺剑士
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカードは通常召喚できず、「ロイヤル・ストレート」の効果でのみ特殊召喚できる。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地に「クィーンズ・ナイト」「ジャックス・ナイト」「キングス・ナイト」が全て存在する場合に発動できる。レベル１～５のモンスターをそれぞれ１体ずつ手札・デッキから墓地へ送り、相手フィールドのカードを全て破壊する。②：このカードが戦闘で破壊された時、自分の墓地の戦士族・光属性モンスターを３体まで対象として発動できる。そのモンスターを特殊召喚する。
-  ko:
+  ko: |-
+    이 카드는 통상 소환할 수 없으며, "로얄 스트레이트"의 효과로만 특수 소환할 수 있다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에 "퀸즈 나이트" "잭스 나이트" "킹스 나이트"가 전부 존재할 경우에 발동할 수 있다. 레벨 1~5 의 몬스터를 각각 1장씩 패 / 덱에서 묘지로 보내고, 상대 필드의 카드를 전부 파괴한다. ②: 이 카드가 전투로 파괴되었을 때, 자신 묘지의 전사족 / 빛 속성 몬스터를 3장까지 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这张卡不能通常召唤，只有用「ロイヤル・ストレート／皇家同花顺」的效果才能特殊召唤。这个卡名的①②效果1回合各能使用1次。①：自己的墓地有「クィーンズ・ナイト／王后骑士」「ジャックス・ナイト／近卫骑士」「キングス・ナイト／国王骑士」全部存在的场合可以发动。从手牌或卡组将等级1～5的怪兽各1只送入墓地，将对手场上的卡全部破坏。②：这张卡被战斗破坏时，可以以自己墓地的最多3只战士族·光属性怪兽为对象发动。将那些怪兽特殊召唤。
