--- a/data/cards/18847598.yaml
+++ b/data/cards/18847598.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ａ<rt>アドバンスド</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> アンバー・マンモス
   ja_romaji: Adobansudo Hōgyokujū Anbā Manmosu
-  ko:
-  ko_rr:
+  ko: <ruby>A<rt>어드밴스드</rt></ruby> 보옥수 앰버 맘모스
+  ko_rr: Adeubaenseudeu Booksu Aembeo Mammoseu
   zh-TW:
   zh-CN: 高等宝玉兽 琥珀猛犸
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：フィールドゾーンに「アドバンスド・ダーク」が存在しない場合にこのモンスターは墓地へ送られる。②：１ターンに１度、自分の「Ａ宝玉獣」カードまたは自分の「アドバンスド・ダーク」を対象とする効果を相手が発動した時に発動できる。その発動を無効にする。③：１ターンに１度、自分の「Ａ宝玉獣」モンスターが攻撃対象に選択された時に発動できる。その攻撃を無効にする。④：表側表示のこのカードがモンスターゾーンで破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
-  ko:
+  ko: |-
+    ①: 필드 존에 "어드밴스드 다크"가 존재하지 않을 경우에 이 몬스터는 묘지로 보내진다. ②: 1턴에 1번, 자신의 "A(어드밴스드) 보옥수" 카드 또는 자신의 "어드밴스드 다크"를 대상으로 하는 효과를 상대가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 한다. ③: 1턴에 1번, 자신의 "A(어드밴스드) 보옥수" 몬스터가 공격 대상으로 선택되었을 때에 발동할 수 있다. 그 공격을 무효로 한다. ④: 앞면 표시의 이 카드가 몬스터 존에서 파괴되었을 경우, 묘지로 보내지 않으며 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓을 수 있다.
   zh-TW:
   zh-CN: |-
     ①：场地区没有「アドバンスド・ダーク／高等黑暗」存在的场合这只怪兽送入墓地。②：1回合1次，以自己的「A宝玉獣／高等宝玉兽」卡或者自己的「アドバンスド・ダーク／高等黑暗」为对象的效果由对手发动时可以发动。使其发动无效。③：1回合1次，自己的「A宝玉獣／高等宝玉兽」怪兽被选择为攻击对象时可以发动。使那次攻击无效。④：表侧表示的这张卡在怪兽区被破坏的场合，可以不送入墓地而是当作永续魔法卡使用以表侧表示放置到自己的魔法陷阱区。
