--- a/data/cards/18940556.yaml
+++ b/data/cards/18940556.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>究極伝導恐獣<rt>アルティメットコンダクターティラノ</rt></ruby>
   ja_romaji: Arutimetto Kondakutā Tirano
   ko: 궁극의 전도 티라노
-  ko_rr:
+  ko_rr: Gunggeuk-ui Jeondo Tirano
   zh-TW:
   zh-CN: 究极传导恐兽
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードは通常召喚できない。自分の墓地から恐竜族モンスター２体を除外した場合に特殊召喚できる。①：１ターンに１度、自分・相手のメインフェイズに発動できる。自分の手札・フィールドのモンスター１体を選んで破壊し、相手フィールドの表側表示モンスターを全て裏側守備表示にする。②：このカードは相手モンスター全てに１回ずつ攻撃できる。③：このカードが守備表示モンスターを攻撃したダメージステップ開始時に発動できる。相手に１０００ダメージを与え、その守備表示モンスターを墓地へ送る。
   ko: |-
-    이 카드는 통상 소환할 수 없다. 자신 묘지의 공룡족 몬스터 2장을 제외했을 경우에 특수 소환할 수 있다. ①: 1턴에 1번, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 자신의 패 / 필드의 몬스터 1장을 골라 파괴하고, 상대 필드의 앞면 표시 몬스터를 전부 뒷면 수비 표시로 한다. ②: 이 카드는 상대 몬스터 전부에 1회씩 공격할 수 있다. ③: 이 카드가 수비 표시 몬스터를 공격한 데미지 스텝 개시시에 발동할 수 있다. 상대에게 1000 데미지를 주고, 그 수비 표시 몬스터를 묘지로 보낸다.
+    이 카드는 통상 소환할 수 없다. 자신 묘지에서 공룡족 몬스터 2장을 제외했을 경우에 특수 소환할 수 있다. ①: 1턴에 1번, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 자신의 패 / 필드의 몬스터 1장을 골라 파괴하고, 상대 필드의 앞면 표시 몬스터를 전부 뒷면 수비 표시로 한다. ②: 이 카드는 상대 몬스터 전부에 1회씩 공격할 수 있다. ③: 이 카드가 수비 표시 몬스터를 공격한 데미지 스텝 개시시에 발동할 수 있다. 상대에게 1000 데미지를 주고, 그 수비 표시 몬스터를 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
     这张卡不能通常召唤。把自己墓地2只恐龙族怪兽除外的场合可以特殊召唤。①：1回合1次，自己·对方的主要阶段才能发动。选自己的手卡·场上1只怪兽破坏，对方场上的表侧表示怪兽全部变成里侧守备表示。②：这张卡可以向对方怪兽全部各作1次攻击。③：这张卡向守备表示怪兽攻击的伤害步骤开始时才能发动。给与对方1000伤害，那只守备表示怪兽送去墓地。
