--- a/data/cards/24151924.yaml
+++ b/data/cards/24151924.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｇ<rt>ジー</rt></ruby>ゴーレム・インヴァリッド・ドルメン
   ja_romaji: Jī Gōremu Invariddo Dorumen
-  ko:
-  ko_rr:
+  ko: G골렘 인밸리드 돌멘
+  ko_rr: Ji Gollem Inbaellideu Dolmen
   zh-TW:
   zh-CN: G巨像 残破墓石
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     地属性モンスター２体以上
     ①：このカードがモンスターゾーンに存在する限り、自分フィールドの相互リンク状態のモンスターは相手フィールドで発動したモンスターの効果を受けない。②：攻撃可能な相手モンスターはこのカードを攻撃しなければならない。③：１ターンに１度、手札からサイバース族モンスター１体を捨てて発動できる。自分はデッキから１枚ドローする。④：相互リンク状態のこのカードが破壊された場合に発動できる。相手フィールドの全ての表側表示のカードの効果は無効化される。
-  ko:
+  ko: |-
+    땅 속성 몬스터 2장 이상
+    ①: 이 카드가 몬스터 존에 존재하는 한, 자신 필드의 상호 링크 상태의 몬스터는 상대 필드에서 발동한 몬스터의 효과를 받지 않는다. ②: 공격 가능한 상대 몬스터는 이 카드를 공격해야 한다. ③: 1턴에 1번, 패에서 사이버스족 몬스터 1장을 버리고 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ④: 상호 링크 상태의 이 카드가 파괴되었을 경우에 발동할 수 있다. 상대 필드의 모든 앞면 표시 카드 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
     地属性怪兽2只以上
