--- a/data/cards/25396150.yaml
+++ b/data/cards/25396150.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: アマゾネス<ruby>拝<rt>はい</rt></ruby><ruby>謁<rt>えつ</rt></ruby>の<ruby>間<rt>ま</rt></ruby>
   ja_romaji: Amazonesu Haietsu no Ma
-  ko:
-  ko_rr:
+  ko: 아마조네스 알현의 공간
+  ko_rr: Amajoneseu Alhyeon-ui Gonggan
   zh-TW:
   zh-CN: 亚马逊拜谒之间
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードの発動時の効果処理として、自分の墓地のモンスター及び自分のＥＸデッキの表側表示のＰモンスターの中から、「アマゾネス」モンスター１体を選んで手札に加えるか、「アマゾネス」Ｐモンスター１体を選んで自分のＰゾーンに置く事ができる。②：自分フィールドに「アマゾネス」モンスターカードが存在し、相手フィールドにモンスターが特殊召喚された場合、その相手モンスター１体を対象として発動できる。そのモンスターの攻撃力分だけ自分のＬＰを回復する。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 자신 묘지의 몬스터 및 자신의 엑스트라 덱의 앞면 표시 펜듈럼 몬스터 중에서, "아마조네스" 몬스터 1장을 골라 패에 넣거나, "아마조네스" 펜듈럼 몬스터 1장을 고르고 자신의 펜듈럼 존에 놓을 수 있다. ②: 자신 필드에 "아마조네스" 몬스터 카드가 존재하고, 상대 필드에 몬스터가 특수 소환되었을 경우, 그 상대 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력만큼만 자신의 LP를 회복한다.
   zh-TW:
   zh-CN: |-
     这个卡名的②效果1回合只能使用1次。①：作为这张卡发动时的效果处理，可以从自己的墓地的怪兽以及自己的额外卡组的表侧表示的灵摆怪兽之中选1只「アマゾネス／亚马逊」怪兽加入手牌或选1只「アマゾネス／亚马逊」灵摆怪兽放置到自己的灵摆区。②：自己场上有「アマゾネス／亚马逊」怪兽存在，对手场上有怪兽特殊召唤的场合，可以以那1只对手怪兽为对象发动。自己的LP恢复那只怪兽的攻击力数值。
