--- a/data/cards/30118701.yaml
+++ b/data/cards/30118701.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>地<rt>ち</rt></ruby><ruby>雷<rt>らい</rt></ruby><ruby>星<rt>せい</rt></ruby>トドロキ
   ja_romaji: Chiraisei Todoroki
-  ko:
-  ko_rr:
+  ko: 지뢰성 토도로키
+  ko_rr: Jiroeseong Todoroki
   zh-TW:
   zh-CN: 地雷星 轰鬼
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：このカードは手札の他のモンスター１体を墓地へ送り、手札から特殊召喚できる。この方法で特殊召喚したこのカードの攻撃力は５００ダウンする。②：自分・相手のバトルフェイズに５００ＬＰを払って発動できる。自分の手札・フィールドから、戦士族の融合モンスターカードによって決められた融合素材モンスターを墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。
-  ko:
+  ko: |-
+    이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 패의 다른 몬스터 1장을 묘지로 보내고, 패에서 특수 소환할 수 있다. 이 방법으로 특수 소환한 이 카드의 공격력은 500 내린다. ②: 자신 / 상대의 배틀 페이즈에 500 LP를 지불하고 발동할 수 있다. 자신의 패 / 필드에서, 전사족 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的以①的方法所作的特殊召唤1回合只能1次，②效果1回合只能使用1次。①：这张卡可以将手牌的其他的1只怪兽送入墓地来从手牌特殊召唤。用这个方法特殊召唤的这张卡的攻击力下降500。②：自己或对手的战斗阶段可以支付500LP发动。从自己的手牌或场上将战士族的融合怪兽卡规定的融合素材怪兽送入墓地，从额外卡组融合召唤那1只融合怪兽。
