--- a/data/cards/32175429.yaml
+++ b/data/cards/32175429.yaml
@@ -5,12 +5,12 @@ name:
   de:
   es:
   fr:
-  it: Chiamata Eroica
+  it:
   pt:
   ja: ヒロイック・コール
   ja_romaji: Heroikku Kōru
-  ko:
-  ko_rr:
+  ko: 히로익 콜
+  ko_rr: Hiroik Kol
   zh-TW:
   zh-CN: 英豪呼唤
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分の手札・墓地から戦士族モンスター１体を選んで特殊召喚する。この効果で「ヒロイック」モンスター以外のモンスターを特殊召喚した場合、そのモンスターは攻撃できず、効果は無効化される。②：自分のＬＰが５００以下の場合、墓地のこのカードを除外し、自分フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの攻撃力は、自分フィールドの、「ヒロイック」カード及びX素材としている「ヒロイック」カードの数×５００アップする。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 묘지에서 전사족 몬스터 1장을 고르고 특수 소환한다. 이 효과로 "히로익" 몬스터 이외의 몬스터를 특수 소환했을 경우, 그 몬스터는 공격할 수 없으며, 효과는 무효화된다. ②: 자신의 LP가 500 이하일 경우, 묘지의 이 카드를 제외하고, 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력은, 자신 필드의, "히로익" 카드 및 엑시즈 소재로 하고 있는 "히로익" 카드의 수 × 500 올린다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：从自己的手牌或墓地选1只战士族怪兽特殊召唤。用这个效果将「ヒロイック／英豪」怪兽以外的怪兽特殊召唤的场合，那只怪兽不能攻击且效果无效化。②：自己的LP为500以下的场合，可以将墓地的这张卡除外，以自己场上的1只表侧表示怪兽为对象发动。那只怪兽的攻击力上升自己场上的「ヒロイック／英豪」卡以及在作为多维素材的「ヒロイック／英豪」卡的数量×500。
