--- a/data/cards/32453837.yaml
+++ b/data/cards/32453837.yaml
@@ -5,12 +5,12 @@ name:
   de:
   es:
   fr:
-  it: "Numero 2: Zanzara Ninja dell'Ombra"
+  it:
   pt:
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>２ <ruby>蚊<rt>か</rt></ruby><ruby>学<rt>がく</rt></ruby><ruby>忍<rt>にん</rt></ruby><ruby>者<rt>じゃ</rt></ruby>シャドー・モスキート
   ja_romaji: Nanbāzu Ni Kagaku Ninja Shadō Mosukīto
-  ko:
-  ko_rr:
+  ko: No.2 문학첩자 섀도우 모스키토
+  ko_rr: Neombeojeu I Gunhakheopja Syaedou Moseukito
   zh-TW:
   zh-CN: No.2 蚊学忍者 影蚊
 text:
@@ -27,7 +27,9 @@ text:
   ja: |-
     レベル２モンスター×２体以上
     ①：このカードは戦闘では破壊されず、このカードの戦闘で発生する自分への戦闘ダメージは０になる。②：攻撃可能な相手モンスターは攻撃しなければならない。③：お互いのモンスターの攻撃宣言時、以下から１つを選択して発動できる。●このカードのＸ素材を１つ取り除き、相手フィールドの表側表示モンスター１体に幻覚カウンターを１つ置く。幻覚カウンターが置かれたモンスターの効果は無効化される。●幻覚カウンターが置かれているモンスター１体を選び、その攻撃力分のダメージを相手に与える。
-  ko:
+  ko: |-
+    레벨 2 몬스터 × 2장 이상
+    ①: 이 카드는 전투로는 파괴되지 않으며, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 0 이 된다. ②: 공격 가능한 상대 몬스터는 공격해야 한다. ③: 서로의 몬스터의 공격 선언시, 이하에서 1개를 선택하고 발동할 수 있다.●이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 앞면 표시 몬스터 1장에 환각 카운터를 1개 놓는다. 환각 카운터가 놓여진 몬스터의 효과는 무효화된다.●환각 카운터가 놓여 있는 몬스터 1장을 고르고, 그 공격력만큼의 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
     等级2怪兽×2只以上
