--- a/data/cards/33391067.yaml
+++ b/data/cards/33391067.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>呪詛<rt>のろい</rt></ruby><ruby>返<rt>がえ</rt></ruby>しのヒトガタ
   ja_romaji: Noroigaeshi no Hitogata
-  ko:
-  ko_rr:
+  ko: 저주반사의 인형
+  ko_rr: Jeojubansa-ui Inhyeong
   zh-TW:
   zh-CN: 返还诅咒的纸人
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分にダメージを与えるモンスターの効果が発動した時に発動できる。その効果で発生する自分への効果ダメージは代わりに相手が受ける。②：このカードが墓地に存在し、自分が戦闘ダメージを受けた時に発動できる。このカードを自分フィールドにセットする。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신에게 데미지를 주는 몬스터 효과가 발동했을 때에 발동할 수 있다. 그 효과로 발생하는 자신에게로의 효과 데미지는 대신에 상대가 받는다. ②: 이 카드가 묘지에 존재하고, 자신이 전투 데미지를 받았을 때에 발동할 수 있다. 이 카드를 자신 필드에 세트한다.
   zh-TW:
   zh-CN: |-
     这个卡名的②效果1回合只能使用1次。①：给予自己伤害的怪兽的效果发动时可以发动。使那个效果发生的对自己的效果伤害由对手代为承受。②：这张卡在墓地存在，自己受到战斗伤害时可以发动。将这张卡盖放到自己的场上。
