--- a/data/cards/39396763.yaml
+++ b/data/cards/39396763.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ダイナ・ベース
   ja_romaji: Daina Bēsu
-  ko:
-  ko_rr:
+  ko: 다이너 베이스
+  ko_rr: Daineo Beiseu
   zh-TW:
   zh-CN: 恐龙基座
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分のＬＰが相手より少ない場合に発動できる。このカードを手札から特殊召喚する。②：自分メインフェイズに発動できる。融合モンスターカードによって決められた、フィールドのこのカードを含む融合素材モンスターを自分の手札・フィールドから墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신의 LP가 상대보다 적을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 메인 페이즈에 발동할 수 있다. 융합 몬스터 카드에 기재된, 필드의 이 카드를 포함하는 융합 소재 몬스터를 자신의 패 / 필드에서 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己的LP比对手少的场合可以发动。将这张卡从手牌特殊召唤。②：自己的主要阶段可以发动。从自己的手牌或场上将融合怪兽卡规定的包含场上的这张卡的融合素材怪兽送入墓地，从额外卡组融合召唤那1只融合怪兽。
