--- a/data/cards/44413654.yaml
+++ b/data/cards/44413654.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｄ<rt>ディフォーマー</rt></ruby>・インパクトリターン
   ja_romaji: Difōmā Inpakuto Ritān
-  ko:
-  ko_rr:
+  ko: <ruby>D<rt>디포머</rt></ruby>·임팩트 리턴
+  ko_rr: Dipomeo Impaekteu Riteon
   zh-TW:
   zh-CN: 变形斗士冲击返回
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：相手フィールドの魔法・罠カードを２枚まで対象として発動できる。手札から「Ｄ」モンスター１体をデッキに戻し、対象のカードを持ち主のデッキに戻す。②：墓地のこのカードを除外し、自分の墓地のモンスター及び除外されている自分のモンスターの中から、「Ｄ」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 상대 필드의 마법 / 함정 카드를 2장까지 대상으로 하고 발동할 수 있다. 패에서 "D(디포머)" 몬스터 1장을 덱으로 되돌리고, 대상의 카드를 주인의 덱으로 되돌린다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 몬스터 및 제외되어 있는 자신의 몬스터 중에서, "D(디포머)" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合只能有1次使用其中任意1个。①：可以以对手场上的最多2张魔法陷阱卡为对象发动。从手牌使1只「D(ディフォーマー)／变形斗士」怪兽返回卡组，使对象卡返回持有者的卡组。②：可以将墓地的这张卡除外，从自己的墓地的怪兽以及除外中的自己的怪兽之中以1只「D(ディフォーマー)／变形斗士」怪兽为对象发动。将那只怪兽以守备表示特殊召唤。
