--- a/data/cards/45236142.yaml
+++ b/data/cards/45236142.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ａ<rt>アドバンスド</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> コバルト・イーグル
   ja_romaji: Adobansudo Hōgyokujū Kobaruto Īguru
-  ko:
-  ko_rr:
+  ko: <ruby>A<rt>어드밴스드</rt></ruby> 보옥수 코발트 이글
+  ko_rr: Adeubaenseudeu Booksu Kobalteu Igeul
   zh-TW:
   zh-CN: 高等宝玉兽 蓝钴鹰
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：フィールドゾーンに「アドバンスド・ダーク」が存在しない場合にこのモンスターは墓地へ送られる。②：手札・フィールドのこのカードを墓地へ送って発動できる。デッキから「アドバンスド・ダーク」１枚を手札に加える。③：１ターンに１度、自分フィールドの「Ａ宝玉獣」カード１枚を対象として発動できる。そのカードを持ち主の手札に戻すかデッキの一番上に戻す。④：表側表示のこのカードがモンスターゾーンで破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
-  ko:
+  ko: |-
+    ①: 필드 존에 "어드밴스드 다크"가 존재하지 않을 경우에 이 몬스터는 묘지로 보내진다. ②: 패 / 필드의 이 카드를 묘지로 보내고 발동할 수 있다. 덱에서 "어드밴스드 다크" 1장을 패에 넣는다. ③: 1턴에 1번, 자신 필드의 "A(어드밴스드) 보옥수" 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 패로 되돌리거나 덱 맨 위로 되돌린다. ④: 앞면 표시의 이 카드가 몬스터 존에서 파괴되었을 경우, 묘지로 보내지 않으며 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓을 수 있다.
   zh-TW:
   zh-CN: |-
     ①：场地区没有「アドバンスド・ダーク／高等黑暗」存在的场合这只怪兽送入墓地。②：可以将手牌或场上的这张卡送入墓地发动。从卡组将1张「アドバンスド・ダーク／高等黑暗」加入手牌。③：1回合1次，可以以自己场上的1张「A宝玉獣／高等宝玉兽」卡为对象发动。使那张卡返回持有者的手牌或返回卡组最上面。④：表侧表示的这张卡在怪兽区被破坏的场合，可以不送入墓地而是当作永续魔法卡使用以表侧表示放置到自己的魔法陷阱区。
