--- a/data/cards/46358784.yaml
+++ b/data/cards/46358784.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ａ<rt>アドバンスド</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> エメラルド・タートル
   ja_romaji: Adobansudo Hōgyokujū Emerarudo Tātoru
-  ko:
-  ko_rr:
+  ko: <ruby>A<rt>어드밴스드</rt></ruby> 보옥수 에머랄드 터틀
+  ko_rr: Adeubaenseudeu Booksu Emeoraldeu Teoteul
   zh-TW:
   zh-CN: 高等宝玉兽 翠玉龟
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：フィールドゾーンに「アドバンスド・ダーク」が存在しない場合にこのモンスターは墓地へ送られる。②：１ターンに１度、フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの表示形式を変更する。この効果は相手ターンでも発動できる。③：表側表示のこのカードがモンスターゾーンで破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
-  ko:
+  ko: |-
+    ①: 필드 존에 "어드밴스드 다크"가 존재하지 않을 경우에 이 몬스터는 묘지로 보내진다. ②: 1턴에 1번, 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 표시 형식을 변경한다. 이 효과는 상대 턴에도 발동할 수 있다. ③: 앞면 표시의 이 카드가 몬스터 존에서 파괴되었을 경우, 묘지로 보내지 않으며 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓을 수 있다.
   zh-TW:
   zh-CN: |-
     ①：场地区没有「アドバンスド・ダーク／高等黑暗」存在的场合这只怪兽送入墓地。②：1回合1次，可以以场上的1只表侧表示怪兽为对象发动。变更那只怪兽的表示形式。这个效果在对手的回合也能发动。③：表侧表示的这张卡在怪兽区被破坏的场合，可以不送入墓地而是当作永续魔法卡使用以表侧表示放置到自己的魔法陷阱区。
