--- a/data/cards/50546029.yaml
+++ b/data/cards/50546029.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｇ<rt>ジー</rt></ruby>ゴーレム・ディグニファイド・トリリトン
   ja_romaji: Jī Gōremu Digunifaido Toririton
-  ko:
-  ko_rr:
+  ko: G골렘 디그니파이드 트릴리톤
+  ko_rr: Ji Gollem Digeunipaideu Teurilliton
   zh-TW:
   zh-CN: G巨像 庄严三石塔
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     地属性モンスター２体以上
     このカード名の③の効果は１ターンに１度しか使用できない。①：攻撃可能な相手モンスターはこのカードを攻撃しなければならない。②：このカードが相手モンスターと戦闘を行うダメージ計算前に１度、手札から地属性モンスター１体を墓地へ送って発動できる。その相手モンスターはターン終了時まで、攻撃力が２００ダウンし、効果は無効化される。③：自分フィールドのリンクモンスターを対象とする効果を相手が発動した時に発動できる。その効果を無効にし破壊する。
-  ko:
+  ko: |-
+    땅 속성 몬스터 2장 이상
+    이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 공격 가능한 상대 몬스터는 이 카드를 공격해야 한다. ②: 이 카드가 상대 몬스터와 전투를 실행하는 데미지 계산 전에 1번, 패에서 땅 속성 몬스터 1장을 묘지로 보내고 발동할 수 있다. 그 상대 몬스터는 턴 종료시까지, 공격력을 200 내리고, 효과는 무효화된다. ③: 자신 필드의 링크 몬스터를 대상으로 하는 효과를 상대가 발동했을 때에 발동할 수 있다. 그 효과를 무효로 하고 파괴한다.
   zh-TW:
   zh-CN: |-
     地属性怪兽2只以上
