--- a/data/cards/58415502.yaml
+++ b/data/cards/58415502.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ロイヤル・ストレート
   ja_romaji: Roiyaru Sutorēto
-  ko:
-  ko_rr:
+  ko: 로얄 스트레이트
+  ko_rr: Royal Seuteureiteu
   zh-TW:
   zh-CN: 皇家同花顺
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：手札及び自分フィールドの表側表示モンスターの中から、「クィーンズ・ナイト」「ジャックス・ナイト」「キングス・ナイト」を１体ずつ選んで墓地へ送る。その後、「クィーンズ・ナイト」「ジャックス・ナイト」「キングス・ナイト」のカード名が全て記されたモンスター１体を自分の手札・デッキ・ＥＸデッキ・墓地から選んで特殊召喚する。
-  ko:
+  ko: |-
+    ①: 패 및 자신 필드의 앞면 표시 몬스터 중에서, "퀸즈 나이트" "잭스 나이트" "킹스 나이트"를 1장씩 고르고 묘지로 보낸다. 그 후, "퀸즈 나이트" "잭스 나이트" "킹스 나이트"의 카드명이 전부 쓰여진 몬스터 1장을 자신의 패 / 덱 / 엑스트라 덱 / 묘지에서 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
     ①：从手牌以及自己场上的表侧表示怪兽之中，将「クィーンズ・ナイト／王后骑士」「ジャックス・ナイト／近卫骑士」「キングス・ナイト／国王骑士」各选1只送入墓地。那之后，从自己的手牌、卡组、额外卡组或墓地选1只全部记述了「クィーンズ・ナイト／王后骑士」「ジャックス・ナイト／近卫骑士」「キングス・ナイト／国王骑士」这些卡名的怪兽特殊召唤。
