--- a/data/cards/61668670.yaml
+++ b/data/cards/61668670.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｇ<rt>ジー</rt></ruby>ゴーレム・クリスタルハート
   ja_romaji: Jī Gōremu Kurisutaru Hāto
-  ko:
-  ko_rr:
+  ko: G골렘 크리스탈하트
+  ko_rr: Ji Gollem Keuriseutalhateu
   zh-TW:
   zh-CN: G巨像 水晶心
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     サイバース族モンスター２体
     このカード名の①の効果は１ターンに１度しか使用できない。①：自分の墓地の地属性リンクモンスター１体を対象として発動できる。そのモンスターをこのカードのリンク先となる自分フィールドに特殊召喚し、このカードにＧＧカウンターを１つ置く。②：このカードの相互リンク先の地属性モンスターは、攻撃力がこのカードのＧＧカウンターの数×６００アップし、１度のバトルフェイズ中に２回攻撃でき、守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。
-  ko:
+  ko: |-
+    사이버스족 몬스터 2장
+    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지의 땅 속성 링크 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 이 카드의 링크 앞이 되는 자신 필드에 특수 소환하고, 이 카드에 GG(G골렘) 카운터를 1개 놓는다. ②: 이 카드의 상호 링크 앞의 땅 속성 몬스터는, 공격력을 이 카드의 GG(G골렘) 카운터의 수 × 600 올리고, 1번의 배틀 페이즈 중에 2회 공격할 수 있으며, 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 상대에게 전투 데미지를 준다.
   zh-TW:
   zh-CN: |-
     电子空间族怪兽2只
