--- a/data/cards/62480168.yaml
+++ b/data/cards/62480168.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: アマゾネスの<ruby>秘<rt>ひ</rt></ruby><ruby>湯<rt>とう</rt></ruby>
   ja_romaji: Amazonesu no Hitō
-  ko:
-  ko_rr:
+  ko: 아마조네스의 비탕
+  ko_rr: Amajoneseu-ui Bitang
   zh-TW:
   zh-CN: 亚马逊的秘汤
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードの発動時の効果処理として、デッキから、「アマゾネス」モンスター１体を手札に加えるか、「アマゾネス」Ｐモンスター１体を選んで自分のＰゾーンに置く事ができる。②：自分フィールドに「アマゾネス」モンスターカードが存在し、自分が戦闘ダメージを受けた時に発動できる。受けたダメージの数値分だけ自分のＬＰを回復する。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 덱에서, "아마조네스" 몬스터 1장을 패에 넣거나, "아마조네스" 펜듈럼 몬스터 1장을 고르고 자신의 펜듈럼 존에 놓을 수 있다. ②: 자신 필드에 "아마조네스" 몬스터 카드가 존재하고, 자신이 전투 데미지를 받았을 때에 발동할 수 있다. 받은 데미지의 수치만큼만 자신의 LP를 회복한다.
   zh-TW:
   zh-CN: |-
     这个卡名的②效果1回合只能使用1次。①：作为这张卡发动时的效果处理，可以从卡组将1只「アマゾネス／亚马逊」怪兽加入手牌或选1只「アマゾネス／亚马逊」灵摆怪兽放置到自己的灵摆区。②：自己场上有「アマゾネス／亚马逊」怪兽存在，自己受到战斗伤害时可以发动。自己的LP恢复受到的伤害数值。
