--- a/data/cards/62503746.yaml
+++ b/data/cards/62503746.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>天<rt>てん</rt></ruby><ruby>雷<rt>らい</rt></ruby><ruby>星<rt>せい</rt></ruby>センコウ
   ja_romaji: Tenraisei Senkou
-  ko:
-  ko_rr:
+  ko: 천뢰성 센코우
+  ko_rr: Cheonnoeseong Senkou
   zh-TW:
   zh-CN: 天雷星 闪光
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに地属性モンスターが召喚・特殊召喚された場合に発動できる。このカードを手札から特殊召喚する。②：墓地のこのカードを除外し、自分フィールドのレベル５以上の戦士族モンスター１体と相手フィールドの攻撃表示モンスター１体を対象として発動できる。その自分のモンスターの攻撃力を１５００ダウンし、その相手モンスターを破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 땅 속성 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 묘지의 이 카드를 제외하고, 자신 필드의 레벨 5 이상의 전사족 몬스터 1장과 상대 필드의 공격 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 자신 몬스터의 공격력을 1500 내리고, 그 상대 몬스터를 파괴한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己场上有地属性怪兽召唤或特殊召唤的场合可以发动。将这张卡从手牌特殊召唤。②：可以将墓地的这张卡除外，以自己场上的1只等级5以上的战士族怪兽和对手场上的1只攻击表示怪兽为对象发动。那只自己的怪兽的攻击力下降1500，将那只对手怪兽破坏。
