--- a/data/cards/67725394.yaml
+++ b/data/cards/67725394.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: らくがきじゅう－てらの
   ja_romaji: Rakugakijū - Terano
-  ko:
-  ko_rr:
+  ko: 낙서괴물－테라노
+  ko_rr: Nakseogoemul - Terano
   zh-TW:
   zh-CN: 涂鸦兽-暴龙
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカードは恐竜族モンスター１体をリリースしてアドバンス召喚できる。このカード名の①の効果は１ターンに１度しか使用できない。①：フィールドに恐竜族モンスターが存在する場合、自分・相手のメインフェイズに発動できる。手札のこのカードをアドバンス召喚する。②：このカードが召喚に成功した場合に発動できる。フィールドのモンスター１体を選んで破壊する。このカードが「らくがきじゅう」モンスターをリリースしてアドバンス召喚していた場合、さらにこのカードの攻撃力は破壊したモンスターの攻撃力の半分アップする。
-  ko:
+  ko: |-
+    이 카드는 공룡족 몬스터 1장을 릴리스하고 어드밴스 소환할 수 있다. 이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드에 공룡족 몬스터가 존재할 경우, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 패의 이 카드를 어드밴스 소환한다. ②: 이 카드가 일반 소환에 성공했을 경우에 발동할 수 있다. 필드의 몬스터 1장을 골라 파괴한다. 이 카드가 "낙서괴물" 몬스터를 릴리스하고 어드밴스 소환하고 있었을 경우, 추가로 이 카드의 공격력은 파괴한 몬스터의 공격력의 절반 올린다.
   zh-TW:
   zh-CN: |-
     这张卡可以将1只恐龙族怪兽解放来高等召唤。这个卡名的①效果1回合只能使用1次。①：场上有恐龙族怪兽存在的场合，自己或对手的主要阶段可以发动。将手牌的这张卡高等召唤。②：这张卡召唤成功的场合可以发动。选场上1只怪兽破坏。这张卡是将「らくがきじゅう／涂鸦兽」怪兽解放来高等召唤的场合，再使这张卡的攻击力上升破坏的怪兽的攻击力的一半数值。
