--- a/data/cards/68441986.yaml
+++ b/data/cards/68441986.yaml
@@ -5,12 +5,12 @@ name:
   de:
   es:
   fr:
-  it: Arte Ninjitsu Marcia delle Zanzare
+  it:
   pt:
   ja: <ruby>蚊<rt>か</rt></ruby><ruby>学<rt>がく</rt></ruby><ruby>忍<rt>にん</rt></ruby><ruby>法<rt>ぽう</rt></ruby>・<ruby>軍蚊<rt>アーミーモスキート</rt></ruby>マーチ
   ja_romaji: Kagaku Ninpō Āmī Mosukīto Māchi
-  ko:
-  ko_rr:
+  ko: 문학인법 아미모스키토 마치
+  ko_rr: Munhak-inheop Amimoseukito Machi
   zh-TW:
   zh-CN: 蚊学忍法·军蚊行进
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札からレベル４以下の昆虫族モンスターを２体まで特殊召喚する（２体を特殊召喚する場合は同じレベルでなければならない）。②：自分フィールドに「Ｎｏ．２ 蚊学忍者シャドー・モスキート」が存在する場合、墓地のこのカードを除外し、自分フィールドの昆虫族モンスターの数まで、相手フィールドの表側表示モンスターを対象として発動できる。そのモンスターに幻覚カウンターを１つ置く。幻覚カウンターが置かれたモンスターの効果は無効化される。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 레벨 4 이하의 곤충족 몬스터를 2장까지 특수 소환한다(2장을 특수 소환할 경우에는 같은 레벨이어야 한다). ②: 자신 필드에 "No.2 문학첩자 섀도우 모스키토"가 존재할 경우, 묘지의 이 카드를 제외하고, 자신 필드의 곤충족 몬스터의 수까지, 상대 필드의 앞면 표시 몬스터를 대상으로 하여 발동할 수 있다. 그 몬스터에 환각 카운터를 1개 놓는다. 환각 카운터가 놓여진 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：从手牌特殊召唤最多2只等级4以下的昆虫族怪兽（要特殊召唤2只的场合必须相同等级）。②：自己场上有「No.2 蚊学忍者シャドー・モスキート／No.2 蚊学忍者 影蚊」存在的场合，可以将墓地的这张卡除外，以最多为自己场上的昆虫族怪兽的数量的对手场上的表侧表示怪兽为对象发动。在那些怪兽上放置1个幻觉指示物。放置有幻觉指示物的怪兽的效果无效化。
