--- a/data/cards/70508653.yaml
+++ b/data/cards/70508653.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>工<rt>こう</rt></ruby><ruby>作<rt>さく</rt></ruby><ruby>箱<rt>ばこ</rt></ruby>
   ja_romaji: Kōsakubako
-  ko:
-  ko_rr:
+  ko: 공작상자
+  ko_rr: Gongjaksangja
   zh-TW:
   zh-CN: 工作箱
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：自分フィールドにモンスターが存在する場合に発動できる。デッキからカード名が異なる装備魔法カード２枚を相手に見せ、相手はその中からランダムに１枚選ぶ。そのカード１枚を自分の手札に加え、残りのカードはデッキの一番下に戻す。
-  ko:
+  ko: |-
+    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 존재할 경우에 발동할 수 있다. 덱에서 카드명이 다른 장착 마법 카드 2장을 상대에게 보여주고, 상대는 그 중에서 무작위로 1장 고른다. 그 카드 1장을 자신의 패에 넣고, 나머지 카드는 덱 맨 아래로 되돌린다.
   zh-TW:
   zh-CN: |-
     这个卡名的①效果1回合只能使用1次。①：自己场上有怪兽存在的场合可以发动。从卡组向对手展示2张卡名不同的装备魔法卡，对手从那之中随机选1张。将那1张卡加入自己的手牌，剩下的卡返回卡组最下面。
