--- a/data/cards/71620241.yaml
+++ b/data/cards/71620241.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ａ<rt>アドバンスド</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> サファイア・ペガサス
   ja_romaji: Adobansudo Hōgyokujū Safaia Pegasasu
-  ko:
-  ko_rr:
+  ko: <ruby>A<rt>어드밴스드</rt></ruby> 보옥수 사파이어 페가수스
+  ko_rr: Adeubaenseudeu Booksu Sapaieo Pegasuseu
   zh-TW:
   zh-CN: 高等宝玉兽 青玉天马
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：フィールドゾーンに「アドバンスド・ダーク」が存在しない場合にこのモンスターは墓地へ送られる。②：このカードが召喚・反転召喚・特殊召喚に成功した場合に発動できる。自分の手札・デッキ・墓地のモンスター及び除外されている自分のモンスターの中から、「Ａ宝玉獣」モンスター１体を選んで永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。③：表側表示のこのカードがモンスターゾーンで破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
-  ko:
+  ko: |-
+    ①: 필드 존에 "어드밴스드 다크"가 존재하지 않을 경우에 이 몬스터는 묘지로 보내진다. ②: 이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 자신의 패 / 덱 / 묘지의 몬스터 및 제외되어 있는 자신의 몬스터 중에서, "A(어드밴스드) 보옥수" 몬스터 1장을 골라 지속 마법 카드로 취급하여 자신의 마법 & 함정 존에 앞면 표시로 놓는다. ③: 앞면 표시의 이 카드가 몬스터 존에서 파괴되었을 경우, 묘지로 보내지 않으며 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓을 수 있다.
   zh-TW:
   zh-CN: |-
     ①：场地区没有「アドバンスド・ダーク／高等黑暗」存在的场合这只怪兽送入墓地。②：这张卡召唤、反转召唤或特殊召唤成功的场合可以发动。从自己的手牌、卡组或墓地的怪兽以及除外中的自己的怪兽之中，选1只「A宝玉獣／高等宝玉兽」怪兽当作永续魔法卡使用以表侧表示放置到自己的魔法陷阱区。③：表侧表示的这张卡在怪兽区被破坏的场合，可以不送入墓地而是当作永续魔法卡使用以表侧表示放置到自己的魔法陷阱区。
