--- a/data/cards/72843899.yaml
+++ b/data/cards/72843899.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ａ<rt>アドバンスド</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> トパーズ・タイガー
   ja_romaji: Adobansudo Hōgyokujū Topāzu Taigā
-  ko:
-  ko_rr:
+  ko: <ruby>A<rt>어드밴스드</rt></ruby> 보옥수 토파즈 타이거
+  ko_rr: Adeubaenseudeu Booksu Topajeu Taigeo
   zh-TW:
   zh-CN: 高等宝玉兽 黄玉虎
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：フィールドゾーンに「アドバンスド・ダーク」が存在しない場合にこのモンスターは墓地へ送られる。②：このカードがモンスターゾーンに存在する限り、自分フィールドの「Ａ宝玉獣」モンスターの攻撃力・守備力は４００アップし、相手フィールドのモンスターの攻撃力・守備力は４００ダウンする。③：表側表示のこのカードがモンスターゾーンで破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
-  ko:
+  ko: |-
+    ①: 필드 존에 "어드밴스드 다크"가 존재하지 않을 경우에 이 몬스터는 묘지로 보내진다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신 필드의 "A(어드밴스드) 보옥수" 몬스터의 공격력 / 수비력은 400 올리고, 상대 필드의 몬스터의 공격력 / 수비력은 400 내린다. ③: 앞면 표시의 이 카드가 몬스터 존에서 파괴되었을 경우, 묘지로 보내지 않으며 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓을 수 있다.
   zh-TW:
   zh-CN: |-
     ①：场地区没有「アドバンスド・ダーク／高等黑暗」存在的场合这只怪兽送入墓地。②：只要这张卡在怪兽区存在，自己场上的「A宝玉獣／高等宝玉兽」怪兽的攻击力、守备力就上升400，对手场上的怪兽的攻击力、守备力就下降400。③：表侧表示的这张卡在怪兽区被破坏的场合，可以不送入墓地而是当作永续魔法卡使用以表侧表示放置到自己的魔法陷阱区。
