--- a/data/cards/75780818.yaml
+++ b/data/cards/75780818.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ダイナ・タンク
   ja_romaji: Daina Tanku
-  ko:
-  ko_rr:
+  ko: 다이너 탱크
+  ko_rr: Daineo Taengkeu
   zh-TW:
   zh-CN: 恐龙战车
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     機械族モンスター＋恐竜族モンスター
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードの攻撃力は、このカードの融合素材とした恐竜族モンスターの元々の攻撃力分アップする。②：フィールドのこのカード１枚のみを対象とする効果が発動した時、このカード以外のフィールドのカード１枚を対象として発動できる。その対象を正しい対象となるそのカードに移し替える。③：このカードが相手によって破壊された場合に発動できる。自分の墓地から恐竜族モンスター１体を選んで特殊召喚する。
-  ko:
+  ko: |-
+    기계족 몬스터 ＋ 공룡족 몬스터
+    이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 공격력은, 이 카드의 융합 소재로 한 공룡족 몬스터의 원래 공격력만큼 올린다. ②: 필드의 이 카드 1장만을 대상으로 하는 효과가 발동했을 때, 이 카드 이외의 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 대상을 적절한 대상이 되는 그 카드에게 옮긴다. ③: 이 카드가 상대에 의해 파괴되었을 경우에 발동할 수 있다. 자신 묘지에서 공룡족 몬스터 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
     机械族怪兽+恐龙族怪兽
