--- a/data/cards/76076738.yaml
+++ b/data/cards/76076738.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>闇<rt>やみ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>族<rt>ぞく</rt></ruby>の<ruby>爪<rt>つめ</rt></ruby>
   ja_romaji: Yamiryūzoku no Tsume
-  ko:
-  ko_rr:
+  ko: 암룡족의 발톱
+  ko_rr: Annyongjok-ui Baltop
   zh-TW:
   zh-CN: 暗龙族之爪
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     闇属性モンスターにのみ装備可能。このカード名の②の効果は１ターンに１度しか使用できない。①：装備モンスターの攻撃力は６００アップし、相手の効果では破壊されない。②：装備モンスターが戦闘で破壊され墓地へ送られた事でこのカードが墓地へ送られた場合に発動できる。そのモンスターを自分フィールドに特殊召喚し、このカードを装備する。この効果で装備されたこのカードは、フィールドから離れた場合に除外される。
-  ko:
+  ko: |-
+    어둠 속성 몬스터에만 장착 가능. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 장착 몬스터의 공격력은 600 올리고, 상대 효과로는 파괴되지 않는다. ②: 장착 몬스터가 전투로 파괴되어 묘지로 보내진 것으로 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 그 몬스터를 자신 필드에 특수 소환하고, 이 카드를 장착한다. 이 효과로 장착된 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
     只有暗属性怪兽才能装备。这个卡名的②效果1回合只能使用1次。①：装备怪兽的攻击力上升600，不会被对手的效果破坏。②：装备怪兽被战斗破坏并送入墓地使这张卡被送入墓地的场合可以发动。将那只怪兽特殊召唤到自己的场上并装备这张卡。用这个效果装备的这张卡从场上离开的场合除外。
