--- a/data/cards/77103950.yaml
+++ b/data/cards/77103950.yaml
@@ -35,6 +35,8 @@ text:
     这个卡名的卡1回合只能发动1张。这个卡名的③效果1回合只能使用1次。①：作为这张卡发动时的效果处理，可以从卡组将1只「ティアラメンツ／哀泪姬」怪兽或者「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」加入手牌。②：自己场上的融合怪兽以及「ティアラメンツ／哀泪姬」怪兽的攻击力上升500。③：自己场上或墓地的「ティアラメンツ／哀泪姬」怪兽返回卡组或额外卡组的场合，可以以场上的1张卡为对象发动。将那张卡破坏。
 card_type: Spell
 property: Field
+series:
+- World Destruction
 sets:
   en:
   - set_number: POTE-EN060
@@ -72,6 +74,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 870972
