--- a/data/cards/79663524.yaml
+++ b/data/cards/79663524.yaml
@@ -5,12 +5,12 @@ name:
   de:
   es:
   fr:
-  it: Cicala Viscida
+  it:
   pt:
   ja: オイリーゼミ
   ja_romaji: Oirīzemi
-  ko:
-  ko_rr:
+  ko: 오일리매미
+  ko_rr: Oillimaemi
   zh-TW:
   zh-CN: 油油蝉
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。自分フィールドの全ての昆虫族モンスターのレベルを１つ下げる。②：このカードの表示形式が変更された場合に発動できる。自分の手札・デッキ・墓地から「オイリーゼミ」１体を選んで特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 자신 필드의 모든 곤충족 몬스터의 레벨을 1개 내린다. ②: 이 카드의 표시 형식이 변경되었을 경우에 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 "오일리매미" 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合可以发动。自己场上的全部昆虫族怪兽的等级下降1。②：这张卡的表示形式变更的场合可以发动。从自己的手牌、卡组或墓地选1只「オイリーゼミ／油油蝉」特殊召唤。
