--- a/data/cards/92731385.yaml
+++ b/data/cards/92731385.yaml
@@ -102,6 +102,6 @@ sets:
     - Super Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 870967
