--- a/data/cards/98875863.yaml
+++ b/data/cards/98875863.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｇ<rt>ジー</rt></ruby>ゴーレム・ロックハンマー
   ja_romaji: Jī Gōremu Rokku Hanmā
-  ko:
-  ko_rr:
+  ko: G골렘 록해머
+  ko_rr: Ji Gollem Rokhaemae
   zh-TW:
   zh-CN: G巨像 岩锤
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札に存在する場合、手札から他のサイバース族モンスター１体を捨てて発動できる。このターン、このカードのレベルは２つ下がる。②：このカードをリリースして発動できる。自分フィールドに「Ｇゴーレムトークン」（サイバース族・地・星１・攻／守０）３体を守備表示で特殊召喚する。この効果の発動後、ターン終了時まで自分はサイバース族モンスターしか特殊召喚できない。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패에 존재할 경우, 패에서 다른 사이버스족 몬스터 1장을 버리고 발동할 수 있다. 이 턴에, 이 카드의 레벨은 2개 내려간다. ②: 이 카드를 릴리스하고 발동할 수 있다. 자신 필드에 "G골렘 토큰"(사이버스족 / 땅 / 레벨 1 / 공 0 / 수 0) 3장을 수비 표시로 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 사이버스족 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：这张卡在手牌存在的场合，可以从手牌将1只其他的电子空间族怪兽舍弃发动。这个回合，这张卡的等级下降2。②：可以将这张卡解放发动。将3只「Gゴレームトークン／G巨像衍生物」（电子空间族·地·1星·攻/守0）以守备表示特殊召唤到自己的场上。这个效果发动后，直到回合结束时自己特殊召唤的只能是电子空间族怪兽。
