--- a/data/cards/99991455.yaml
+++ b/data/cards/99991455.yaml
@@ -5,12 +5,12 @@ name:
   de:
   es:
   fr:
-  it: Raijin la Stella Fermatuono
+  it:
   pt:
   ja: <ruby>覇<rt>は</rt></ruby><ruby>雷<rt>らい</rt></ruby><ruby>星<rt>せい</rt></ruby>ライジン
   ja_romaji: Haraisei Raijin
-  ko:
-  ko_rr:
+  ko: 패뢰성 라이진
+  ko_rr: Paeroeseong Raijin
   zh-TW:
   zh-CN: 霸雷星 雷神
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     レベル５以上の戦士族・光属性モンスター＋戦士族・地属性モンスター
     このカード名の③の効果は１ターンに１度しか使用できない。①：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ戦闘ダメージを与える。②：このカードがレベルを持たないモンスターとの戦闘で相手に与える戦闘ダメージは倍になる。③：このカードが戦闘・効果で破壊され墓地へ送られたターンのエンドフェイズに、自分の墓地のレベル７以下の戦士族モンスター２体を対象として発動できる。そのモンスターを特殊召喚する。
-  ko:
+  ko: |-
+    레벨 5 이상의 전사족 / 빛 속성 몬스터 ＋ 전사족 / 땅 속성 몬스터
+    이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 전투 데미지를 준다. ②: 이 카드가 레벨을 가지지 않는 몬스터와의 전투로 상대에게 주는 전투 데미지는 배가 된다. ③: 이 카드가 전투 / 효과로 파괴되어 묘지로 보내진 턴의 엔드 페이즈에, 자신 묘지의 레벨 7 이하의 전사족 몬스터 2장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     等级5以上的战士族·光属性怪兽+战士族·地属性怪兽
