--- a/data/cards/yugipedia900023.yaml
+++ b/data/cards/yugipedia900023.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 7 monsters
-    Once per turn, if "Kshatri-La Shangri-La" activated its effect(s) this turn, you can also Xyz Summon "Kshatri-La Ariseheart" by using a "Kshatri-La" monster you control as material. (Transfer its materials to this card.) Any card sent to the GY is banished instead. Once per Chain, each time a card(s) is banished: Attach 1 banished card to this card as material. Once per turn (Quick Effect): You can detach 3 materials from this card, then target 1 card on the field; banish it face-down.
+    Once per turn, if "Kshatri-La Shangri-La" activated its effect(s) this turn, you can also Xyz Summon "Kshatri-La Ariseheart" by using a "Kshatri-La" monster you control. (Transfer its materials to this card.) Any card sent to the GY is banished instead. Once per Chain, each time a card(s) is banished: Attach 1 banished card to this card as material. Once per turn (Quick Effect): You can detach 3 materials from this card, then target 1 card on the field; banish it face-down.
   de:
   es:
   fr:
