--- a/data/cards/41232647.yaml
+++ b/data/cards/41232647.yaml
@@ -102,6 +102,9 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: SLF1-JP065
+    set_name: Selection 5
+    rarities:
   ko:
   - set_number: DBMF-KR022
     set_name: 'Deck Build Pack: Mystic Fighters'
