--- a/data/cards/88875132.yaml
+++ b/data/cards/88875132.yaml
@@ -98,6 +98,9 @@ sets:
     - Super Rare
     - Secret Rare
     - Collectors Rare
+  - set_number: SLF1-JP009
+    set_name: Selection 5
+    rarities:
   ko:
   - set_number: DP21-KR036
     set_name: 'Duelist Pack: Legend Duelist 4'
