--- a/data/cards/yugipedia900387.yaml
+++ b/data/cards/yugipedia900387.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If your opponent controls 3 or more monsters: Choose 1 of them, and make your opponent send either it or all other monsters they control to the GY.
+    If your opponent controls 3 or more monsters, choose 1 of them, and make your opponent send either it or all other monsters they control to the GY (their choice).
   de:
   es:
   fr:
