--- a/data/cards/88875132.yaml
+++ b/data/cards/88875132.yaml
@@ -8,7 +8,7 @@ name:
   it: Assalto Ferroviario Pegaso Volante
   pt: Ferrovia Célere Pégaso Alado
   ja: <ruby>爆<rt>ばく</rt></ruby><ruby>走<rt>そう</rt></ruby><ruby>軌<rt>き</rt></ruby><ruby>道<rt>どう</rt></ruby>フライング・ペガサス
-  ja_romaji: Bakusō Kidō Furaingu Pegasasu
+  ja_romaji: Bakusōkidō Furaingu Pegasasu
   ko: 폭주궤도 플라잉 페가수스
   ko_rr: Pokjugwedo Peullaing Pegasuseu
   zh-TW:
