--- a/data/cards/02665273.yaml
+++ b/data/cards/02665273.yaml
@@ -102,6 +102,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: 22TP-JP411
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: DBMF-KR033
     set_name: 'Deck Build Pack: Mystic Fighters'
