--- a/data/cards/11155484.yaml
+++ b/data/cards/11155484.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 宝玉的奇迹
 text:
   en: |-
-    When a Spell/Trap Card, or monster effect, is activated: Destroy 1 "Crystal Beast" card you control, and if you do, negate the activation, and if you do that, destroy that card. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone while this card is in your GY (even during the Damage Step): You can banish this card; place 1 "Crystal Beast" monster from your hand, Deck, or GY face-up in your Spell & Trap Zone as a Continuous Spell. You can only use this effect of "Crystal Miracle" once per turn.
+    When a Spell/Trap Card, or monster effect, is activated: Destroy 1 "Crystal Beast" card you control, and if you do, negate that activation, and if you do that, destroy that card. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone while this card is in your GY, even during the Damage Step: You can banish this card; place 1 "Crystal Beast" monster from your hand, Deck, or GY, face-up in your Spell & Trap Zone as a Continuous Spell. You can only use this effect of "Crystal Miracle" once per turn.
   de:
   es:
   fr:
@@ -32,6 +32,31 @@ property: Counter
 series:
 - Crystal
 sets:
+  en:
+  - set_number: SDCB-EN033
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  de:
+  - set_number: SDCB-DE033
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  fr:
+  - set_number: SDCB-FR033
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  it:
+  - set_number: SDCB-IT033
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  pt:
+  - set_number: SDCB-PT033
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: SD44-JP033
     set_name: 'Structure Deck: Legend of the Crystals'
