--- a/data/cards/14558127.yaml
+++ b/data/cards/14558127.yaml
@@ -21,7 +21,7 @@ text:
     ● Send a card from the Deck to the GY.
     You can only use this effect of "Ash Blossom & Joyous Spring" once per turn.
   de: |-
-    Wenn eine Karte oder ein Effekt aktiviert wird, die oder der einen dieser Effekte enthält (Schnelleffekt): Du kannst diese Karte abwerfen; annulliere den Effekt.
+    Wenn eine Karte oder ein Effekt aktiviert wird, die oder der einen dieser Effekte enthält (Schnelleffekt): Du kannst diese Karte abwerfen; annulliere jenen Effekt.
     ● Eine Karte vom Deck der Hand hinzufügen.
     ● Spezialbeschwörung vom Deck durchführen.
     ● Eine Karte vom Deck auf den Friedhof legen.
