--- a/data/cards/26866984.yaml
+++ b/data/cards/26866984.yaml
@@ -109,6 +109,10 @@ sets:
     set_name: Eternity Code
     rarities:
     - Rare
+  - set_number: 22TP-JP407
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: ETCO-KR032
     set_name: Eternity Code
