--- a/data/cards/45222299.yaml
+++ b/data/cards/45222299.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: Duel Terminal Chronicle 1 - Chapter of Awakening
     rarities:
     - Duel Terminal Super Parallel Rare
+  - set_number: 22TP-JP408
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: HA06-KR046
     set_name: 'Hidden Arsenal 6: Omega Xyz'
