--- a/data/cards/47149093.yaml
+++ b/data/cards/47149093.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 宝玉的玲珑
 text:
   en: |-
-    You can only control 1 "Crystal Brilliance". "Crystal Beast" monsters you control gain ATK equal to their original DEF. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone (even during the Damage Step): You can send this face-up card from your Spell & Trap Zone to the GY; Special Summon 1 "Crystal Beast" monster from your hand or GY, also any damage you take this turn is halved.
+    You can only control 1 "Crystal Brilliance". Each "Crystal Beast" monster you control gains ATK equal to its original DEF. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone, even during the Damage Step: You can send this face-up card to the GY; Special Summon 1 "Crystal Beast" monster from your hand or GY, also any damage you take this turn is halved.
   de:
   es:
   fr:
@@ -32,6 +32,31 @@ property: Continuous
 series:
 - Crystal
 sets:
+  en:
+  - set_number: SDCB-EN034
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  de:
+  - set_number: SDCB-DE034
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  fr:
+  - set_number: SDCB-FR034
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  it:
+  - set_number: SDCB-IT034
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  pt:
+  - set_number: SDCB-PT034
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: SD44-JP034
     set_name: 'Structure Deck: Legend of the Crystals'
