--- a/data/cards/53776969.yaml
+++ b/data/cards/53776969.yaml
@@ -51,6 +51,7 @@ atk: 500
 materials: 1 "Scareclaw" monster or 1 "Visas Starfrost"
 series:
 - Scareclaw
+- Heart
 sets:
   en:
   - set_number: POTE-EN050
@@ -88,6 +89,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 869740
