--- a/data/cards/54408264.yaml
+++ b/data/cards/54408264.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Target 1 Normal Monster, 1 "Magikey" monster, or 1 "Magikey Maftea" in your GY; shuffle it into the Deck, then if you activated this card in response to your opponent's card or effect activation, Normal Monsters and "Magikey" monsters you control (except Tokens) are unaffected by that opponent's card effect.
   de: |-
-    Wähle 1 Normales Monster, 1 „Magieschlüssel“-Monster oder 1 „Magieschlüssel Maftea“ in deinem Friedhof; mische es oder ihn ins Deck, dann, falls du diese Karte als Reaktion auf die Aktivierung einer Karte oder eines Effekts deines Gegners aktiviert hast, bleiben Normale Monster und „Magieschlüssel“-Monster, die du kontrollierst, (außer Spielmarken) von dem Karteneffekt des Gegners unberührt.
+    Wähle 1 Normales Monster, 1 „Magieschlüssel“-Monster oder 1 „Magieschlüssel Maftea“ in deinem Friedhof; mische es oder ihn ins Deck, dann, falls du diese Karte als Reaktion auf die Aktivierung einer Karte oder eines Effekts deines Gegners aktiviert hast, bleiben Normale Monster und „Magieschlüssel“-Monster, die du kontrollierst, (außer Spielmarken) von jenem Karteneffekt des Gegners unberührt.
   es: |-
     Selecciona 1 Monstruo Normal, 1 monstruo "Magillave" o 1 "Maftea Magillave" en tu Cementerio; barájalo al Deck y después, si activaste esta carta en respuesta a la activación de una carta o efecto de tu adversario, los Monstruos Normales y los monstruos "Magillave" que controles (excepto Fichas) no son afectados por ese efecto de carta del adversario.
   fr: |-
