--- a/data/cards/59820352.yaml
+++ b/data/cards/59820352.yaml
@@ -6,7 +6,7 @@ name:
   es: Canto de la Tierra
   fr: Chant de la Terre
   it: Inno alla Terra
-  pt:
+  pt: Cântico da Terra
   ja: <ruby>大<rt>だい</rt></ruby><ruby>地<rt>ち</rt></ruby><ruby>讃<rt>さん</rt></ruby><ruby>頌<rt>しょう</rt></ruby>
   ja_romaji: Daichi Sanshō
   ko: 대지 찬송
@@ -21,11 +21,11 @@ text:
   es: |-
     Esta carta puede ser utilizada en la Invocación por Ritual de cualquier Monstruo de Ritual de TIERRA. También debes Sacrificar monstruos en tu mano o Campo cuyos Niveles totales sean exactamente iguales al Nivel del Monstruo de Ritual que estés Invocando por Ritual.
   fr: |-
-    Cette carte peut être utilisée pour Invoquer Rituellement un Monstre Rituel TERRE. Vous devez aussi Sacrifier des monstres depuis votre main ou Terrain dont le Niveau total est égal au Niveau du Monstre Rituel que vous Invoquez Rituellement.
+    Cette carte peut être utilisée pour Invoquer Rituellement un Monstre Rituel TERRE. Vous devez aussi Sacrifier des monstres depuis votre main ou Terrain dont le Niveau total est exactement égal au Niveau du Monstre Rituel que vous Invoquez Rituellement.
   it: |-
     Questa carta può essere utilizzata per Evocare tramite Rituale qualsiasi Mostro Rituale TERRA. Devi anche offrire come Tributo, dalla tua mano o Terreno, mostri il cui Livello totale sia esattamente pari al Livello del Mostro Rituale che stai Evocando tramite Rituale.
   pt: |-
-    Esta carta pode ser utilizada para o Ritual Summon de um EARTH Ritual Monster. Selecione 1 EARTH Ritual Monster na sua mão e Tribute monstros do seu lado do campo e/ou da sua mão até obter um Nível total igual ao Nível do Ritual Monster selecionado. Depois disso, Special Summon o monstro selecionado da sua mão para o seu lado do campo.
+    Este card pode ser usado para a Invocação-Ritual de qualquer Monstro de Ritual de TERRA. Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja exatamente igual ao Nível do Monstro de Ritual que você Invocar por Invocação-Ritual.
   ja: |-
     地属性の儀式モンスターの降臨に使用する事ができる。フィールドか手札から、儀式召喚する地属性モンスターと同じレベルになるように生け贄を捧げなければならない。
   ko: |-
