--- a/data/cards/60643553.yaml
+++ b/data/cards/60643553.yaml
@@ -19,7 +19,7 @@ text:
     ● Each time your opponent Special Summons an Effect Monster(s) during the Main Phase or Battle Phase, you gain LP equal to that monster's ATK. If you did not gain LP by this effect, your LP are halved during the End Phase.
   de: |-
     Während eines beliebigen Spielzugs, außer während der End Phase (Schnelleffekt): Du kannst diese Karte abwerfen; wende in diesem Spielzug diesen Effekt an. Du kannst diesen Effekt von „Geisterschwester und gruseliger Hartriegel“ nur einmal pro Spielzug verwenden.
-    ● Jedes Mal, wenn dein Gegner während der Main Phase oder der Battle Phase ein oder mehr Effektmonster als Spezialbeschwörung beschwört, erhältst du LP in Höhe der ATK des Monsters. Falls du durch diesen Effekt keine LP erhalten hast, werden deine LP während der End Phase halbiert.
+    ● Jedes Mal, wenn dein Gegner während der Main Phase oder der Battle Phase ein oder mehr Effektmonster als Spezialbeschwörung beschwört, erhältst du LP in Höhe der ATK jenes Monsters. Falls du durch diesen Effekt keine LP erhalten hast, werden deine LP während der End Phase halbiert.
   es: |-
     Durante cualquier turno, excepto la End Phase (Efecto Rápido): puedes descartar esta carta; aplica este efecto este turno. Sólo puedes usar este efecto de "Hermana Fantasma & Cornejo Espectral" una vez por turno.
     ● Cada vez que tu adversario Invoque de Modo Especial uno o más Monstruos de Efecto durante la Main Phase o la Battle Phase, ganas LP igual al ATK de ese monstruo. Si no ganaste LP por este efecto, tus LP se dividen a la mitad durante la End Phase.
