--- a/data/cards/62015408.yaml
+++ b/data/cards/62015408.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     If your opponent controls more monsters than you do (Quick Effect): You can discard this card; reveal 1 card in your Extra Deck, then look at your opponent's Extra Deck, also banish all cards in their Extra Deck with the same name as that revealed card. You can only use this effect of "Ghost Reaper & Winter Cherries" once per turn.
   de: |-
-    Falls dein Gegner mehr Monster kontrolliert als du (Schnelleffekt): Du kannst diese Karte abwerfen; zeige 1 Karte in deinem Extra Deck vor, dann sieh dir das Extra Deck deines Gegners an, zusätzlich verbanne alle Karten in seinem Extra Deck mit demselben Namen wie die vorgezeigte Karte. Du kannst diesen Effekt von „Geisterschnitter und Winterkirschblüten“ nur einmal pro Spielzug verwenden.
+    Falls dein Gegner mehr Monster kontrolliert als du (Schnelleffekt): Du kannst diese Karte abwerfen; zeige 1 Karte in deinem Extra Deck vor, dann sieh dir das Extra Deck deines Gegners an, zusätzlich verbanne alle Karten in seinem Extra Deck mit demselben Namen wie jene vorgezeigte Karte. Du kannst diesen Effekt von „Geisterschnitter und Winterkirschblüten“ nur einmal pro Spielzug verwenden.
   es: |-
     Si tu adversario controla más monstruos que tú (Efecto Rápido): puedes descartar esta carta; muestra 1 carta en tu Deck Extra, y después mira el Deck Extra de tu adversario, y además destierra todas las cartas en su Deck Extra con el mismo nombre que la carta mostrada. Sólo puedes usar este efecto de "Parca Fantasma & Cerezas del Invierno" una vez por turno.
   fr: |-
