--- a/data/cards/65681983.yaml
+++ b/data/cards/65681983.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Declare 1 card name; banish 1 of that declared card from your Main Deck, and if you do, negate its effects, as well as the activated effects and effects on the field of cards with the same original name, until the end of this turn. You can only activate 1 "Crossout Designator" per turn.
   de: |-
-    Deklariere 1 Kartennamen; verbanne 1 der deklarierten Karte von deinem Main Deck und falls du dies tust, annulliere bis zum Ende dieses Spielzugs ihre Effekte sowie die aktivierten Effekte und Effekte auf dem Spielfeld von Karten mit demselben Grund-Namen. Du kannst nur 1 „Auslöschungsinformant“ pro Spielzug aktivieren.
+    Deklariere 1 Kartennamen; verbanne 1 jener deklarierten Karte von deinem Main Deck und falls du dies tust, annulliere bis zum Ende dieses Spielzugs ihre Effekte sowie die aktivierten Effekte und Effekte auf dem Spielfeld von Karten mit demselben Grund-Namen. Du kannst nur 1 „Auslöschungsinformant“ pro Spielzug aktivieren.
   es: |-
     Declara 1 nombre de carta; destierra de tu Deck Principal 1 de esa carta declarada y, si lo haces, hasta el final de este turno niega sus efectos, así como los efectos activados y los efectos en el Campo de cartas con el mismo nombre original. Sólo puedes activar 1 "Designador de Crossout" por turno.
   fr: |-
