--- a/data/cards/68300121.yaml
+++ b/data/cards/68300121.yaml
@@ -21,7 +21,7 @@ text:
   de: |-
     2 Monster der Stufe 4
     Falls diese Karte als Xyz-Beschwörung beschworen wird: Du kannst 1 Material von dieser Karte abhängen; füge deiner Hand 1 Normales Monster der Stufe 4 oder höher von deinem Deck oder Friedhof hinzu. Falls diese Karte ein Normales Monster als Material hat, erhält sie diesen Effekt.
-    ● Am Beginn des Damage Steps, falls diese Karte gegen ein Monster eines Gegners mit derselben Eigenschaft wie ein Normales Monster oder „Magieschlüssel“-Monster in deinem Friedhof kämpft: Du kannst 1 Material von dieser Karte abhängen; dein Gegner muss das Monster auf den Friedhof legen.
+    ● Am Beginn des Damage Steps, falls diese Karte gegen ein Monster eines Gegners mit derselben Eigenschaft wie ein Normales Monster oder „Magieschlüssel“-Monster in deinem Friedhof kämpft: Du kannst 1 Material von dieser Karte abhängen; dein Gegner muss jenes Monster auf den Friedhof legen.
   es: |-
     2 monstruos de Nivel 4
     Si esta carta es Invocada Xyz: puedes desacoplar 1 material de esta carta; añade a tu mano 1 Monstruo Normal de Nivel 4 o mayor en tu Deck o Cementerio. Si esta carta tiene como material un Monstruo Normal, gana este efecto.
