--- a/data/cards/72427512.yaml
+++ b/data/cards/72427512.yaml
@@ -18,7 +18,7 @@ text:
     FLIP: Target 1 monster on the field; destroy it, and if you do, this card gains ATK equal to that monster's original ATK, then you can change this card's Type to that monster's original Type.
     Cannot be destroyed by battle. Cannot be destroyed by the effects of monsters with its same Type.
   de: |-
-    FLIPP: Wähle 1 Monster auf dem Spielfeld; zerstöre es und falls du dies tust, erhält diese Karte ATK in Höhe der Grund-ATK des Monsters, dann kannst du den Typ dieser Karte in den Grund-Typ des Monsters ändern.
+    FLIPP: Wähle 1 Monster auf dem Spielfeld; zerstöre es und falls du dies tust, erhält diese Karte ATK in Höhe der Grund-ATK jenes Monsters, dann kannst du den Typ dieser Karte in den Grund-Typ jenes Monsters ändern.
     Kann nicht durch Kampf zerstört werden. Kann nicht durch die Effekte von Monstern mit demselben Typ zerstört werden.
   es: |-
     VOLTEO: Selecciona 1 monstruo en el Campo; destrúyelo y, si lo haces, esta carta gana ATK igual al ATK original de ese monstruo, y después puedes cambiar el Tipo de esta carta al Tipo original de ese monstruo.
