--- a/data/cards/78161361.yaml
+++ b/data/cards/78161361.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Once per turn, when your Cyberse monster declares an attack: You can discard 1 monster; that attacking monster gains 600 ATK, until the end of this turn.
   de: |-
-    Einmal pro Spielzug, wenn dein Cyberse-Monster einen Angriff deklariert: Du kannst 1 Monster abwerfen; das angreifende Monster erhält bis zum Ende dieses Spielzugs 600 ATK.
+    Einmal pro Spielzug, wenn dein Cyberse-Monster einen Angriff deklariert: Du kannst 1 Monster abwerfen; jenes angreifende Monster erhält bis zum Ende dieses Spielzugs 600 ATK.
   es: |-
     Una vez por turno, cuando tu monstruo Ciberso declara un ataque: puedes descartar 1 monstruo; ese monstruo atacante gana 600 ATK, hasta el final de este turno.
   fr: |-
