--- a/data/cards/85766789.yaml
+++ b/data/cards/85766789.yaml
@@ -1,7 +1,7 @@
 konami_id: 17731
 password: 85766789
 name:
-  en: Crystal Grace
+  en: Crystal Boon
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 宝玉的祝福
 text:
   en: |-
-    Special Summon up to 2 "Crystal Beast" Monster Cards from your Spell & Trap Zone, and if you do, gain LP equal to their total original ATK. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone while this card is in your GY (even during the Damage Step): You can banish this card; excavate the top card of your Deck, and if it is a "Crystal Beast" monster, either add it to your hand or Special Summon it. Otherwise, send it to the GY. You can only use this effect of "Crystal Grace" once per turn.
+    Special Summon up to 2 "Crystal Beast" Monster Cards from your Spell & Trap Zone, and if you do, gain LP equal to their combined original ATK. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone while this card is in your GY, even during the Damage Step: You can banish this card; excavate the top card of your Deck, and if it is a "Crystal Beast" monster, either add it to your hand or Special Summon it. Otherwise, send that card to the GY. You can only use this effect of "Crystal Boon" once per turn.
   de:
   es:
   fr:
@@ -32,6 +32,31 @@ property: Normal
 series:
 - Crystal
 sets:
+  en:
+  - set_number: SDCB-EN032
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  de:
+  - set_number: SDCB-DE032
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  fr:
+  - set_number: SDCB-FR032
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  it:
+  - set_number: SDCB-IT032
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  pt:
+  - set_number: SDCB-PT032
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: SD44-JP032
     set_name: 'Structure Deck: Legend of the Crystals'
