--- a/data/cards/88875132.yaml
+++ b/data/cards/88875132.yaml
@@ -101,6 +101,9 @@ sets:
   - set_number: SLF1-JP009
     set_name: Selection 5
     rarities:
+    - Normal Parallel Rare
+    - Ultra Rare
+    - Prismatic Secret Rare
   ko:
   - set_number: DP21-KR036
     set_name: 'Duelist Pack: Legend Duelist 4'
