--- a/data/cards/91800273.yaml
+++ b/data/cards/91800273.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Falls du keine Karten in deinem Friedhof hast (Schnelleffekt): Du kannst diese Karte von deiner Hand auf den Friedhof legen; bis zum Ende des nächsten Spielzugs wird jede Karte, die auf den Friedhof gelegt wird, stattdessen verbannt.
   es: |-
-    Si no tienes cartas en tu Cementerio (Efecto Rápido): puedes mandar al Cementerio esta carta en tu mano; hasta el final del siguiente turno, cualquier carta mandada al Cementerio es desterrada en su lugar.
+    Si no tienes cartas en tu Cementerio (Efecto Rápido): puedes mandar al Cementerio esta carta en tu mano; hasta el final del próximo turno, cualquier carta mandada al Cementerio es desterrada en su lugar.
   fr: |-
     Si vous n'avez aucune carte dans votre Cimetière (Effet Rapide) : vous pouvez envoyer cette carte depuis votre main au Cimetière ; jusqu'à la fin du prochain tour, les cartes envoyées au Cimetière sont bannies à la place.
   it: |-
