--- a/data/cards/10938846.yaml
+++ b/data/cards/10938846.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 心之桥梁
 text:
   en: |-
-    During your Main Phase, you can Normal Summon 1 "Crystal Beast" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) You can only use each of the following effects of "Rainbow Bridge of the Heart" once per turn. During your Main Phase: You can destroy 1 "Crystal Beast" card you control or in your hand, and if you do, add 1 "Crystal" Spell/Trap from your Deck to your hand. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone (even during the Damage Step): You can target 1 card your opponent controls; return both it and this card to the hand.
+    During your Main Phase, you can Normal Summon 1 "Crystal Beast" monster, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) You can only use each of the following effects of "Rainbow Bridge of the Heart" once per turn. During your Main Phase: You can destroy 1 "Crystal Beast" card you control or in your hand, and if you do, add 1 "Crystal" Spell/Trap from your Deck to your hand. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone, even during the Damage Step: You can target 1 card your opponent controls; return both that card and this card to the hand.
   de:
   es:
   fr:
@@ -32,6 +32,31 @@ property: Continuous
 series:
 - Rainbow Bridge
 sets:
+  en:
+  - set_number: SDCB-EN045
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: SDCB-DE045
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: SDCB-FR045
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: SDCB-IT045
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: SDCB-PT045
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SD44-JPP04
     set_name: 'Structure Deck: Legend of the Crystals Light of Transcending Bonds Pack'
