--- a/data/cards/12877076.yaml
+++ b/data/cards/12877076.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 宝玉神觉醒
 text:
   en: |-
-    If you control an "Ultimate Crystal" monster: Activate 1 or both of the following effects, and resolve in sequence, OR: Reveal 1 "Ultimate Crystal" monster in your hand and activate 1 of the following effects;
+    Reveal 1 "Ultimate Crystal" monster in your hand, then activate 1 of these effects. If you control an "Ultimate Crystal" monster, you can activate 1 or 2 of these effects in sequence, instead (and do not have to reveal a monster).
     ● Take 1 "Rainbow Bridge" card or 1 "Rainbow Refraction" from your Deck, and either add it to your hand or send it to the GY.
     ● Special Summon 1 "Crystal Beast" Monster Card from your hand, Deck, GY, or Spell & Trap Zone.
     You can only activate 1 "Awakening of the Crystal Ultimates" per turn.
@@ -38,25 +38,30 @@ series:
 - Crystal
 sets:
   en:
-  - set_number: SDCB-EN0??
+  - set_number: SDCB-EN016
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
+    - Common
   de:
-  - set_number: SDCB-DE0??
+  - set_number: SDCB-DE016
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
+    - Common
   fr:
-  - set_number: SDCB-FR0??
+  - set_number: SDCB-FR016
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
+    - Common
   it:
-  - set_number: SDCB-IT0??
+  - set_number: SDCB-IT016
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
+    - Common
   pt:
-  - set_number: SDCB-PT0??
+  - set_number: SDCB-PT016
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
+    - Common
   ja:
   - set_number: SD44-JP016
     set_name: 'Structure Deck: Legend of the Crystals'
