--- a/data/cards/25573115.yaml
+++ b/data/cards/25573115.yaml
@@ -19,9 +19,9 @@ text:
   de: |-
     Falls du ein als Normalbeschwörung beschworenes/gesetztes Monster kontrollierst: Zerstöre alle als Spezialbeschwörung beschworenen Monster auf dem Spielfeld. Du kannst bis zum Ende deines nächsten Spielzugs, nachdem diese Karte aktiviert wurde, keine Normalbeschwörungen/Setzen duchführen. Du kannst nur 1 „Spitzenprädation“ pro Spielzug aktivieren.
   es: |-
-    Si controlas un monstruo Invocado de Modo Normal/Colocado: destruye todos los monstruos Invocados de Modo Especial en el Campo. Hasta el final de tu próximo turno después de que esta carta fue activada, no puedes Invocar de Modo Normal/Colocar. Sólo puedes activar 1 "Depredación Ápex" por turno.
+    XSi controlas un monstruo Invocado de Modo Normal/Colocado: destruye todos los monstruos Invocados de Modo Especial en el Campo. Hasta el final de tu próximo turno después de que esta carta fue activada, no puedes Invocar de Modo Normal/Colocar. Sólo puedes activar 1 "Depredación Ápex" por turno.
   fr: |-
-    Si vous contrôlez un monstre Invoqué/Posé Normalement : détruisez tous les monstres Invoqués Spécialement sur le Terrain. Jusqu'à la fin de votre prochain tour après activation de cette carte, vous ne pouvez pas Invoquer/Poser Normalement. Vous ne pouvez activer qu'1 "Prédation Apex" par tour.
+    XSi vous contrôlez un monstre Invoqué/Posé Normalement : détruisez tous les monstres Invoqués Spécialement sur le Terrain. Jusqu'à la fin de votre prochain tour après activation de cette carte, vous ne pouvez pas Invoquer/Poser Normalement. Vous ne pouvez activer qu'1 "Prédation Apex" par tour.
   it: |-
     Se controlli un mostro Evocato Normalmente/Posizionato: distruggi tutti i mostri Evocati Specialmente sul Terreno. Fino alla fine del tuo prossimo turno dopo che questa carta viene attivata, non puoi Evocare Normalmente/Posizionare. Puoi attivare solo 1 "Predazione Alfa" per turno.
   pt: |-
