--- a/data/cards/28226490.yaml
+++ b/data/cards/28226490.yaml
@@ -51,6 +51,7 @@ def: 3000
 materials: '"Tearlaments Reino Heart" + 2 Aqua-Type monsters'
 series:
 - Tearlaments
+- Heart
 sets:
   en:
   - set_number: POTE-EN043
@@ -104,6 +105,6 @@ sets:
     - Ultra Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 870968
