--- a/data/cards/29948294.yaml
+++ b/data/cards/29948294.yaml
@@ -20,23 +20,23 @@ text:
     During the End Phase, if a Fusion Monster was sent to your GY this turn: You can add this card from the GY to your hand. You can only use 1 "Branded in High Spirits" effect per turn, and only once that turn.
   de: |-
     Zeige 1 Monster in deiner Hand vor und lege 1 Fusionsmonster der Stufe 8 mit demselben Typ und 2500 ATK oder DEF von deinem Extra Deck auf den Friedhof, dann kannst du diesen Effekt ausführen.
-    ● Wirf das vorgezeigte Monster ab und falls du dies tust, füge deiner Hand 1 „Gefallener von Albaz“ oder 1 Monster, das die Karte in ihrem Text aufführt, von deinem Deck hinzu.
-    Während der End Phase, falls in diesem Spielzug ein Fusionsmonster auf deinen Friedhof gelegt wurden: Du kannst diese Karte vom Friedhof deiner Hand hinzufügen. Du kannst nur 1 Effekt von „Mit guter Laune markiert“ pro Spielzug verwenden und in dem Spielzug nur einmal.
+    ● Wirf das vorgezeigte Monster ab und falls du dies tust, füge deiner Hand 1 „Gefallener von Albaz“ oder 1 Monster, das ihn erwähnt, von deinem Deck hinzu.
+    Während der End Phase, falls in diesem Spielzug ein Fusionsmonster auf deinen Friedhof gelegt wurden: Du kannst diese Karte vom Friedhof deiner Hand hinzufügen. Du kannst nur 1 Effekt von „Mit guter Laune markiert“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
   es: |-
     Muestra 1 monstruo en tu mano y manda al Cementerio 1 Monstruo de Fusión de Nivel 8 en tu Deck Extra, con el mismo Tipo, que tenga 2500 ATK o DEF, y después puedes aplicar este efecto.
-    ● Descarta el monstruo mostrado y, si lo haces, añade a tu mano 1 "Caído de Albaz", o 1 monstruo que liste esa carta en su texto, en tu Deck.
+    ● Descarta el monstruo mostrado y, si lo haces, añade a tu mano 1 "Caído de Albaz", o 1 monstruo que lo mencione, en tu Deck.
     Durante la End Phase, si un Monstruo de Fusión fue mandado a tu Cementerio este turno: puedes añadir a tu mano esta carta en el Cementerio. Sólo puedes usar 1 efecto de "Señalada Exultante" por turno, y sólo una vez ese turno.
   fr: |-
     Révélez 1 monstre dans votre main et envoyez 1 Monstre Fusion de Niveau 8, du même Type et qui a 2500 ATK ou DEF, depuis votre Extra Deck au Cimetière, puis vous pouvez appliquer cet effet.
-    ● Défaussez le monstre révélé, et si vous le faites, ajoutez 1 "Albaz le Déchu" ou 1 monstre qui liste la carte dans son texte, depuis votre Deck à votre main.
+    ● Défaussez le monstre révélé, et si vous le faites, ajoutez 1 "Albaz le Déchu" ou 1 monstre qui le mentionne, depuis votre Deck à votre main.
     Durant la End Phase, si un Monstre Fusion a été envoyé à votre Cimetière ce tour : vous pouvez ajouter cette carte depuis le Cimetière à votre main. Vous ne pouvez utiliser qu'1 effet de "Marqué de Bonne Humeur" par tour, et uniquement une fois le tour.
   it: |-
     Rivela 1 mostro nella tua mano e manda dal tuo Extra Deck al Cimitero 1 Mostro Fusione di Livello 8 con lo stesso Tipo che ha ATK o DEF 2500, poi puoi applicare questo effetto.
-    ● Scarta il mostro rivelato e, se lo fai, aggiungi 1 "Caduto di Albaz", o 1 mostro che indica quella carta nel suo testo, dal tuo Deck alla tua mano.
-    Durante la End Phase, se un Mostro Fusione è stato mandati al tuo Cimitero in questo turno: puoi aggiungere questa carta dal Cimitero alla tua mano. Puoi utilizzare solo 1 effetto di "Marchiato nel Buonumore" per turno, e solo una volta in quel turno.
+    ● Scarta il mostro rivelato e, se lo fai, aggiungi 1 "Caduto di Albaz", o 1 mostro che lo menziona, dal tuo Deck alla tua mano.
+    Durante la End Phase, se un Mostro Fusione è stato mandato al tuo Cimitero in questo turno: puoi aggiungere questa carta dal Cimitero alla tua mano. Puoi utilizzare solo 1 effetto di "Marchiato nel Buonumore" per turno, e solo una volta in quel turno.
   pt: |-
     Revele 1 monstro na sua mão e envie 1 Monstro de Fusão de Nível 8 do seu Deck Adicional para o Cemitério, com o mesmo Tipo, que tenha 2500 de ATK ou DEF, e, depois, você pode aplicar este efeito.
-    ● Descarte o monstro revelado e, se isso acontecer, adicione 1 "Caído de Arbaz" ou 1 monstro que liste esse card em seu texto do seu Deck à sua mão.
+    ● Descarte o monstro revelado e, se isso acontecer, adicione 1 "Caído de Arbaz" ou 1 monstro que o mencione do seu Deck à sua mão.
     Durante a Fase Final, se um Monstro de Fusão foi enviado para o seu Cemitério neste turno: você pode adicionar este card do Cemitério à sua mão. Você só pode usar 1 efeito de "Marcado em Bom Humor" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：手札のモンスター１体を相手に見せ、そのモンスターと同じ種族で、攻撃力または守備力が２５００のレベル８融合モンスター１体をＥＸデッキから墓地へ送る。その後、以下の効果を適用できる。●見せたモンスターを捨て、「アルバスの落胤」１体またはそのカード名が記されたモンスター１体をデッキから手札に加える。②：このターンに融合モンスターが自分の墓地へ送られている場合、エンドフェイズに発動できる。墓地のこのカードを手札に加える。
