--- a/data/cards/37626500.yaml
+++ b/data/cards/37626500.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Questa carta può essere utilizzata per Evocare tramite Rituale qualsiasi Mostro Rituale LUCE. Devi anche offrire come Tributo, dalla tua mano o Terreno, mostri il cui Livello totale sia esattamente pari al Livello del Mostro Rituale che stai Evocando tramite Rituale.
   pt: |-
-    Este card pode ser usado para a Invocação-Ritual de qualquer Monstro Ritual de LUZ. Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja exatamente igual ao Nível do Monstro Ritual que você Invocou por Invocação-Ritual.
+    Este card pode ser usado para a Invocação-Ritual de qualquer Monstro de Ritual de LUZ. Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja exatamente igual ao Nível do Monstro de Ritual que você Invocou por Invocação-Ritual.
   ja: |-
     光属性の儀式モンスターの降臨に必要。①：レベルの合計が儀式召喚するモンスターと同じになるように、自分の手札・フィールドのモンスターをリリースし、手札から光属性の儀式モンスター１体を儀式召喚する。
   ko: |-
