--- a/data/cards/40633084.yaml
+++ b/data/cards/40633084.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Tribute 1 non-Token Insect monster; Special Summon up to 1 "Beetrooper Token" (Insect/EARTH/Level 3/ATK 1000/DEF 1000) for every 1000 original ATK of that Tributed monster. You can only activate "Beetrooper Squad" once per turn.
   de: |-
-    Biete 1 Insekt-Nichtspielmarke-Monster als Tribut an; beschwöre für jede 1000 Grund-ATK des als Tribut angebotenen Monsters bis zu 1 „Käferkavallerie-Spielmarke“ (Insekt/ERDE/Stufe 3/ATK 1000/DEF 1000) als Spezialbeschwörung. Du kannst „Käferkavallerie-Trupp“ nur einmal pro Spielzug aktivieren.
+    Biete 1 Insekt-Nichtspielmarke-Monster als Tribut an; beschwöre für jede 1000 Grund-ATK jenes als Tribut angebotenen Monsters bis zu 1 „Käferkavallerie-Spielmarke“ (Insekt/ERDE/Stufe 3/ATK 1000/DEF 1000) als Spezialbeschwörung. Du kannst „Käferkavallerie-Trupp“ nur einmal pro Spielzug aktivieren.
   es: |-
     Sacrifica 1 monstruo Insecto que no sea una Ficha; Invoca de Modo Especial hasta 1 "Ficha Escaraballería" (Insecto/TIERRA/Nivel 3/ATK 1000/DEF 1000) por cada 1000 ATK original de ese monstruo Sacrificado. Sólo puedes activar "Escuadrón de Escaraballería" una vez por turno.
   fr: |-
