--- a/data/cards/49032236.yaml
+++ b/data/cards/49032236.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.81 초노급포탑열차 슈페리어 도라
   ko_rr: Neombeojeu Yeoldeunhana Chonogeup-potap-yeolcha Syuperi-eo Dora
   zh-TW:
-  zh-CN: No.81 超重型炮塔列车 优越多拉炮
+  zh-CN: 编号81 超重型炮塔列车 优级多拉炮
 text:
   en: |-
     2 Level 10 monsters
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 앞면 표시 몬스터는 턴 종료시까지, 그 몬스터 이외의 카드의 효과를 받지 않는다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    10星怪兽×2
-    ①：1回合1次，把这张卡1个XYZ素材取除，以场上1只表侧表示怪兽为对象才能发动。那只怪兽直到回合结束时不受那只怪兽以外的卡的效果影响。这个效果在对方回合也能发动。
+    等级10怪兽×2
+    ①：1回合1次，去除此卡的1个超量素材，以场上的1只表侧表示怪兽为对象可以发动。该表侧表示怪兽直至回合结束时为止，不受自身以外的卡的效果影响。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: EARTH
@@ -163,6 +163,11 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Rare
+  zh-CN:
+  - set_number: DP21-SC049
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
