--- a/data/cards/59438930.yaml
+++ b/data/cards/59438930.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     When a monster on the field activates its effect, or when a Spell/Trap that is already face-up on the field activates its effect (Quick Effect): You can send this card from your hand or field to the GY; destroy that card on the field. You can only use this effect of "Ghost Ogre & Snow Rabbit" once per turn.
   de: |-
-    Wenn der Effekt eines Monsters auf dem Spielfeld aktiviert wird oder wenn der Effekt eines/r Zaubers/Falle aktiviert wird, der oder die bereits offen auf dem Spielfeld liegt (Schnelleffekt): Du kannst diese Karte von deiner Hand oder Spielfeldseite auf den Friedhof legen; zerstöre die Karte auf dem Spielfeld. Du kannst diesen Effekt von „Geisteroger und Schneehase“ nur einmal pro Spielzug verwenden.
+    Wenn der Effekt eines Monsters auf dem Spielfeld aktiviert wird oder wenn der Effekt eines/r Zaubers/Falle aktiviert wird, der oder die bereits offen auf dem Spielfeld liegt (Schnelleffekt): Du kannst diese Karte von deiner Hand oder Spielfeldseite auf den Friedhof legen; zerstöre jene Karte auf dem Spielfeld. Du kannst diesen Effekt von „Geisteroger und Schneehase“ nur einmal pro Spielzug verwenden.
   es: |-
     Cuando un monstruo en el Campo activa su efecto o cuando una Mágica/Trampa que ya esté boca arriba en el Campo activa su efecto (Efecto Rápido): puedes mandar al Cementerio esta carta en tu mano o Campo; destruye esa carta en el Campo. Sólo puedes usar este efecto de "Ogro Fantasma & Conejo de las Nieves" una vez por turno.
   fr: |-
