--- a/data/cards/73642296.yaml
+++ b/data/cards/73642296.yaml
@@ -21,8 +21,10 @@ text:
     ● Banish a card(s) from the GY.
     You can only use this effect of "Ghost Belle & Haunted Mansion" once per turn.
   de: |-
-    Wenn eine Karte oder ein Effekt aktiviert wird, die oder der einen dieser Effekte enthält (Schnelleffekt): Du kannst diese Karte abwerfen; annulliere die Aktivierung.
-    ● Eine oder mehr Karten vom Friedhof der Hand, dem Deck und/oder dem Extra Deck hinzufügen. ● Eine oder mehr Monsterkarten als Spezialbeschwörung vom Friedhof beschwören. ● Eine oder mehr Karten vom Friedhof verbannen.
+    Wenn eine Karte oder ein Effekt aktiviert wird, die oder der einen dieser Effekte enthält (Schnelleffekt): Du kannst diese Karte abwerfen; annulliere jene Aktivierung.
+    ● Eine oder mehr Karten vom Friedhof der Hand, dem Deck und/oder dem Extra Deck hinzufügen.
+    ● Eine oder mehr Monsterkarten als Spezialbeschwörung vom Friedhof beschwören.
+    ● Eine oder mehr Karten vom Friedhof verbannen.
     Du kannst diesen Effekt von „Geistermädchen & Spukhaus“ nur einmal pro Spielzug verwenden.
   es: |-
     Cuando es activada una carta o efecto que incluya cualquiera de estos efectos (Efecto Rápido): puedes descartar esta carta; niega esa activación.
@@ -37,13 +39,13 @@ text:
     ● Bannir une ou plusieurs cartes depuis le Cimetière.
     Vous ne pouvez utiliser cet effet de "Beauté Fantôme et Manoir Hanté" qu'une fois par tour.
   it: |-
-    Quando viene attivata una carta o un effetto che include uno qualsiasi di questi effetti (Effetto Rapido): puoi scartare questa carta; annulla l'attivazione.
+    Quando viene attivata una carta o un effetto che include uno qualsiasi di questi effetti (Effetto Rapido): puoi scartare questa carta; annulla quell'attivazione.
     ● Aggiungere una o più carte dal Cimitero alla mano, Deck e/o Extra Deck.
     ● Evocare Specialmente una o più Carte Mostro dal Cimitero.
     ● Bandire una o più carte dal Cimitero.
     Puoi utilizzare questo effetto di "Bella Fantasma & Maniero Infestato" una sola volta per turno.
   pt: |-
-    Quando um card ou efeito for ativado que inclua qualquer um desses efeitos (Efeito Rápido): você pode descartar este card; negue essa ativação.
+    Quando um card ou efeito for ativado que inclua qualquer um desses efeitos (Efeito Rápido): você pode descartar este card; negue a ativação.
     ● Adicionar um ou mais cards do Cemitério à mão, ao Deck e/ou ao Deck Adicional.
     ● Invocar por Invocação-Especial um ou mais Cards de Monstro do Cemitério.
     ● Banir um ou mais cards do Cemitério.
