--- a/data/cards/73956664.yaml
+++ b/data/cards/73956664.yaml
@@ -41,6 +41,7 @@ atk: 1500
 def: 2100
 series:
 - Tearlaments
+- Heart
 sets:
   en:
   - set_number: POTE-EN015
@@ -78,6 +79,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 870971
