--- a/data/cards/82738008.yaml
+++ b/data/cards/82738008.yaml
@@ -20,23 +20,23 @@ text:
     You can only activate 1 "Branded in Red" per turn.
   de: |-
     Wähle 1 „Despia“-Monster oder „Gefallener von Albaz“ in deinem Friedhof; füge es oder ihn deiner Hand hinzu, dann kannst du den folgenden Effekt ausführen.
-    ● Beschwöre 1 Fusionsmonster der Stufe 8 oder höher als Fusionsbeschwörung von deinem Extra Deck, indem du das auf ihm aufgeführte Fusionsmaterial von deiner Hand oder Spielfeldseite verbannst, aber es kann in diesem Spielzug nicht direkt angreifen.
+    ● Beschwöre 1 Fusionsmonster der Stufe 8 oder höher als Fusionsbeschwörung von deinem Extra Deck, indem du das auf ihm erwähnte Fusionsmaterial von deiner Hand oder Spielfeldseite verbannst, aber es kann in diesem Spielzug nicht direkt angreifen.
     Du kannst nur 1 „Rot markiert“ pro Spielzug aktivieren.
   es: |-
     Selecciona 1 monstruo "Despía" o "Caído de Albaz" en tu Cementerio; añádelo a tu mano, y después puedes aplicar el siguiente efecto.
-    ● Invoca por Fusión 1 Monstruo de Fusión de Nivel 8 o mayor desde tu Deck Extra, desterrando Materiales de Fusión listados en él en tu mano o Campo, pero no puede atacar directamente este turno.
+    ● Invoca por Fusión 1 Monstruo de Fusión de Nivel 8 o mayor desde tu Deck Extra, desterrando Materiales de Fusión mencionados en él en tu mano o Campo, pero éste no puede atacar directamente este turno.
     Sólo puedes activar 1 "Señalado en Rojo" por turno.
   fr: |-
     Ciblez 1 "Albaz le Déchu" ou monstre "Despia" dans votre Cimetière ; ajoutez-le à votre main, puis vous pouvez appliquer l'effet suivant.
-    ● Invoquez par Fusion 1 Monstre Fusion de min. Niveau 8 depuis votre Extra Deck, en bannissant les Matériels Fusion listés sur celui-ci depuis votre main ou Terrain, mais il ne peut pas attaquer directement ce tour.
+    ● Invoquez par Fusion 1 Monstre Fusion de min. Niveau 8 depuis votre Extra Deck, en bannissant les Matériels Fusion mentionnés sur celui-ci depuis votre main ou Terrain, mais il ne peut pas attaquer directement ce tour.
     Vous ne pouvez activer qu'1 "Marqué en Rouge" par tour.
   it: |-
     Scegli come bersaglio 1 mostro "Dispia" o "Caduto di Albaz" nel tuo Cimitero; aggiungilo alla tua mano, poi puoi applicare il seguente effetto.
-    ● Evoca tramite Fusione 1 Mostro Fusione di Livello 8 o superiore dal tuo Extra Deck, bandendo i Materiali da Fusione indicati su di esso dalla tua mano o Terreno, ma esso non può attaccare direttamente in questo turno.
+    ● Evoca tramite Fusione 1 Mostro Fusione di Livello 8 o superiore dal tuo Extra Deck, bandendo i Materiali da Fusione menzionati su di esso dalla tua mano o Terreno, ma esso non può attaccare direttamente in questo turno.
     Puoi attivare solo 1 "Marchiato in Rosso" per turno.
   pt: |-
     Escolha 1 monstro "Despia" ou "Caído de Arbaz" no seu Cemitério; adicione-o à sua mão e, depois, você pode aplicar o seguinte efeito.
-    ● Invoque por Invocação-Fusão 1 Monstro de Fusão de Nível 8 ou mais do seu Deck Adicional, ao banir as Matérias de Fusão listadas nele da sua mão ou do campo, mas ele não pode atacar diretamente neste turno.
+    ● Invoque por Invocação-Fusão 1 Monstro de Fusão de Nível 8 ou mais do seu Deck Adicional, ao banir as Matérias de Fusão mencionadas nele da sua mão ou do campo, mas ele não pode atacar diretamente neste turno.
     Você só pode ativar 1 "Marcado em Vermelho" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分の墓地の、「デスピア」モンスターまたは「アルバスの落胤」１体を対象として発動できる。そのモンスターを手札に加える。その後、以下の効果を適用できる。●自分の手札・フィールドから、レベル８以上の融合モンスターカードによって決められた融合素材モンスターを除外し、その融合モンスター１体をＥＸデッキから融合召喚する。この効果で特殊召喚したモンスターはこのターン直接攻撃できない。
